/* Noun case links */ <at#163652>

--- a/en/a/at.3964.wikitext
+++ b/en/a/at.3964.wikitext
@@ -23,29 +23,29 @@
 #: ''He threw a rock at me.''
 
 ====Translations====
-*[[Arabic]]: [[في]] (fiː)
+*Arabic: [[في]] (fiː)
 *[[Breton]]: [[e]] (1), [[da]] (2)
-*[[Bulgarian]]: [[в]] (v), [[на]] (na), [[при]] (pri), [[до]] (do)
-*[[Czech]]: [[u]]
-*[[{{da}}]]: [[på]]
-*[[Dutch]]: [[op]] (1), [[om]] (2)
+*Bulgarian: [[в]] (v), [[на]] (na), [[при]] (pri), [[до]] (do)
+*Czech: [[u]]
+*{{da}}: [[på]]
+*Dutch: [[op]] (1), [[om]] (2)
 *[[Esperanto]]: [[sur]] (1), [[je]] (2), [[al]] (3)
 *{{fo}}: [[í]] / [[á]] / [[hjá]] / [[til]] (1), [[eftir]] ''(dative case)'' (3)  
-*[[Finnish]]: [[-lla]] / [[-llä]] ''(adessive case)'' (1); [[-ssa]] / [[-ssä]] ''(inessive case)'' (1); [[-lta]] / [[-ltä]] ''(ablative case)'' (2); [[-na]] / [[-nä]] ''(essive case)'' (2); [[-lle]] ''(allative case)'' (3); [[kohti]] (3)
-*[[French]]: [[à]] (1,2)
-*[[German]]: [[an]] (1), [[auf]] (1), [[bei]] (1), [[in]] (1), [[um]] (2), [[nach]] (3), [[zu]] (3)
-*[[Hungarian]]: [[-n]] / [[-on]] / [[-en]] / [[-ön]] ''(superessive case)'' (1); [[-nál]] / [[-nél]] ''(adessive case)'' (1); [[-kor]] ''(temporalis case)'' (2); [[-t]] ''accusative case'' (3)
+*Finnish: [[-lla]] / [[-llä]] ''([[adessive case]])'' (1); [[-ssa]] / [[-ssä]] ''([[inessive case]])'' (1); [[-lta]] / [[-ltä]] ''([[ablative case]])'' (2); [[-na]] / [[-nä]] ''([[essive case]])'' (2); [[-lle]] ''([[allative case]])'' (3); [[kohti]] (3)
+*French: [[à]] (1,2)
+*German: [[an]] (1), [[auf]] (1), [[bei]] (1), [[in]] (1), [[um]] (2), [[nach]] (3), [[zu]] (3)
+*Hungarian: [[-n]] / [[-on]] / [[-en]] / [[-ön]] ''([[superessive case]])'' (1); [[-nál]] / [[-nél]] ''([[adessive case]])'' (1); [[-kor]] ''([[temporalis case]])'' (2); [[-t]] ''accusative case'' (3)
 *[[Interlingua]]: [[a]], [[in]]
-*[[Italian]]: [[a]], [[in#Italian|in]]
-*[[Japanese]]: [[で]] (de), [[に]] (ni)
+*Italian: [[a#Italian|a]], [[in#Italian|in]]
+*Japanese: [[で]] (de), [[に]] (ni)
 *[[Persian]]: [[دَر]] (dær)
-*[[Polish]]: [[przy]]
-*[[Portuguese]]: [[a]], [[em]]
-*[[Russian]]: [[при]] (pri), [[у]] (u), [[возле]] (vózle), [[в]] (v), [[на]] (na)
-*[[Spanish]]: [[a]], [[en]]
-*[[Swedish]]: [[på]] (1,3), [[mot]] (3) 
-*[[Turkish]]: [[-da]], [[-de]]
-*[[Vietnamese]]: [[ở tại]], [[lúc]], [[vào]]
+*Polish: [[przy]]
+*Portuguese: [[a]], [[em]]
+*Russian: [[при]] (pri), [[у]] (u), [[возле]] (vózle), [[в]] (v), [[на]] (na)
+*Spanish: [[a]], [[en]]
+*Swedish: [[på]] (1,3), [[mot]] (3) 
+*Turkish: [[-da]], [[-de]]
+*Vietnamese: [[ở tại]], [[lúc]], [[vào]]
 
 ----
 
