--- a/en/a/at.3964.wikitext
+++ b/en/a/at.3964.wikitext
@@ -34,7 +34,7 @@
 *Finnish: [[-lla]] / [[-llä]] ''([[adessive case]])'' (1); [[-ssa]] / [[-ssä]] ''([[inessive case]])'' (1); [[-lta]] / [[-ltä]] ''([[ablative case]])'' (2); [[-na]] / [[-nä]] ''([[essive case]])'' (2); [[-lle]] ''([[allative case]])'' (3); [[kohti]] (3)
 *French: [[à]] (1,2)
 *German: [[an]] (1), [[auf]] (1), [[bei]] (1), [[in]] (1), [[um]] (2), [[nach]] (3), [[zu]] (3)
-*Hungarian: [[-n]] / [[-on]] / [[-en]] / [[-ön]] ''([[superessive case]])'' (1); [[-nál]] / [[-nél]] ''([[adessive case]])'' (1); [[-kor]] ''([[temporalis case]])'' (2); [[-t]] ''accusative case'' (3)
+*Hungarian: [[-n]] / [[-on]] / [[-en]] / [[-ön]] ''([[superessive case]])'' (1); [[-nál]] / [[-nél]] ''([[adessive case]])'' (1); [[-kor]] ''([[temporalis case]])'' (2); [[-t]] (''[[accusative case]]'') (3)
 *[[Interlingua]]: [[a]], [[in]]
 *Italian: [[a#Italian|a]], [[in#Italian|in]]
 *Japanese: [[で]] (de), [[に]] (ni)
