paraphrasing to remove copyvio <anaclitism#3451334>

--- a/en/a/anaclitism.856469.wikitext
+++ b/en/a/anaclitism.856469.wikitext
@@ -1,1 +1,11 @@
-'''Anaclitism''' is the act of achieving adult sexual arousal by activities or objects one was exposed to as an infant. [http://www.odd-sex.com/anaclitism.htm] The [[fetish]] value often stems from tactile stimulation similar to that experienced by the infant before it could see well.
+''For another use of the term "anaclitism", see [[anaclitic depression]]''
+
+In the field of [[sexology]], '''anaclitism''' involves deriving adult [[sexual arousal]] from objects that one was exposed to as an infant. The [[fetish]] value often stems from tactile stimulation similar to that experienced by the infant before it could see well.
+
+== See also ==
+* [[Sexual imprinting]]
+* [[Breast fetishism]]
+* [[Adult baby]]
+* [[Diaperism]]
+
+[[Category:Sexology]]
