--- a/en/a/anaclitism.856469.wikitext
+++ b/en/a/anaclitism.856469.wikitext
@@ -2,10 +2,13 @@
 
 In the field of [[sexology]], '''anaclitism''' involves deriving adult [[sexual arousal]] from objects that one was exposed to as an infant. The [[fetish]] value often stems from tactile stimulation similar to that experienced by the infant before it could see well.
 
+Anaclitism is closely related to the phenomenon of [[infantilism]], also known by the terms [[adult baby]] and [[autonepiophilia]].
+
 == See also ==
 * [[Sexual imprinting]]
 * [[Breast fetishism]]
-* [[Adult baby]]
 * [[Diaperism]]
+
+{{sex-stub}}
 
 [[Category:Sexology]]
