--- a/en/m/marmot.8229.wikitext
+++ b/en/m/marmot.8229.wikitext
@@ -72,4 +72,5 @@ French [[marmotte]], Italian [[marmotta]], [[marmotto]], of uncertain etymology.
 ===See also===
 * [[w:Marmot|Marmot]] — Wikipedia
 
+[[nl:marmot]]
 [[pl:Marmot]]
