[[Category:Romanica language]] <abandono#209891>

--- a/en/a/abandono.4114.wikitext
+++ b/en/a/abandono.4114.wikitext
@@ -14,6 +14,7 @@
 ----
 
 == [[Romanica]] ==
+[[Category:Romanica language]]
 === Noun ===
 <b>abandono</b>
 #I. [[abandonment]] 1. [[action of abandoning]] 2. [[state of being]] [[abandoned]] II. [[abandon]]<p>
