correct Jap. kanji for mono <thing#178372>

--- a/en/t/thing.7362.wikitext
+++ b/en/t/thing.7362.wikitext
@@ -40,7 +40,7 @@ From Middle English, from Old English [[þing]].
 *Indonesian: [[benda]], [[barang]], [[makhluk]]
 *[[Interlingua]]: [[cosa]]
 *Italian: [[cosa]] ''f''
-*Japanese: [[もの]] (mono)
+*Japanese: [[物]] (もの, Transcription: mono)
 *Latin: [[res]]
 *Norwegian: [[ting]], [[dings]], [[greie]]''m''
 *[[Persian]]: [[چيز]] (čiz)
