--- a/en/t/then.7353.wikitext
+++ b/en/t/then.7353.wikitext
@@ -27,4 +27,6 @@ IPA: [[WEAE]] /ðɛn/
 *[[Finnish]]: [[silloin]] (1), [[sitten]] (2, 3), [[niin]] (4), [[toisaalta]] (5)
 *[[Indonesian]]: [[maka]] (if-then), [[kemudian]], [[lalu]], [[setelah itu]], [[selanjutnya]], [[berikutnya]]
 *[[Japanese]]: [[それから]] (sorekara), [[その後]] (sono ato, sono go), [[次]] ([[つぎ]], tsugi)
+*[[Kurdish]]: [[hingê]]
 *[[Portuguese]]: [[então]]
+*[[Turkish]]: [[o zaman]]
