--- a/en/r/rabbit.8241.wikitext
+++ b/en/r/rabbit.8241.wikitext
@@ -70,7 +70,8 @@
 *'''Romanian''': [[iepure de vizuină]]
 *'''Romansh''': [[cunigl]]
 *'''Romany''': [[shoshoy(m.) shoshni]] ''f''
-*'''Russian''': [[кроль]] (krol'),[[кролик]] (krolik)
+*'''Russian''': [[кролик]] (krolik) "m"
+*""Russian"": [[крольчиха]] "f"
 *'''Sami''': [[kaniidna]]
 *'''Sardinian''': [[cunillu]], [[cacciappu]]
 *'''Scottish''': [[coineanach]]
