--- a/en/r/rabbit.8241.wikitext
+++ b/en/r/rabbit.8241.wikitext
@@ -71,7 +71,7 @@
 *'''Romansh''': [[cunigl]]
 *'''Romany''': [[shoshoy(m.) shoshni]] ''f''
 *'''Russian''': [[кролик]] (krolik) "m"
-*""Russian"": [[крольчиха]] "f"
+*'''Russian''': [[крольчиха]] "f"
 *'''Sami''': [[kaniidna]]
 *'''Sardinian''': [[cunillu]], [[cacciappu]]
 *'''Scottish''': [[coineanach]]
