/* Preposition */ + indicating state <at#181078>

--- a/en/a/at.3964.wikitext
+++ b/en/a/at.3964.wikitext
@@ -23,6 +23,8 @@
 #: ''At six o'clock.''
 # indicating a target
 #: ''He threw a rock at me.''
+# indicating state
+#: ''Men at work.''
 
 ====Translations====
 *Arabic: [[في]] (fiː)
