add definition <polecat#248874>

--- a/en/p/polecat.8236.wikitext
+++ b/en/p/polecat.8236.wikitext
@@ -1,14 +1,12 @@
 ==English==
 === Pronunciation ===
 *[[w:IPA|IPA]]: /'pɔlkæt/
-
+===Etymology===
+Middle French ''[[pole]]'' [[hen]] + [[cat]] because of its fondness for poultry
 === Noun ===
 '''polecat'''
-
-# [[animal]]. {{substub}}
-
-====Scientific name====
-*[[Mustela putorius]]
+#a weasel like animal of the genus ''[[Mustela]]'', notably ''[[Mustela putorius]]''.
+#''(US regional):'' a skunk
 
 ==== Translations ====
 *'''Albanian''': [[qelbësi]]
