--- a/en/a/at.3964.wikitext
+++ b/en/a/at.3964.wikitext
@@ -40,6 +40,7 @@
 *German: [[an]] (1), [[auf]] (1), [[bei]] (1), [[in]] (1), [[um]] (2), [[nach]] (3), [[zu]] (3)
 *Hungarian: [[-n]] / [[-on]] / [[-en]] / [[-ön]] ''([[superessive case]])'' (1); [[-nál]] / [[-nél]] ''([[adessive case]])'' (1); [[-kor]] ''([[temporalis case]])'' (2); [[-t]] (''[[accusative case]]'') (3)
 *[[Interlingua]]: [[a]], [[in]]
+*Irish: [[ag#Irish|ag]]
 *Italian: [[a#Italian|a]], [[in#Italian|in]]
 *Japanese: [[で]] (de), [[に]] (ni)
 *[[Persian]]: [[در|دَر]] (dær)
