--- a/en/i/island.4316.wikitext
+++ b/en/i/island.4316.wikitext
@@ -29,6 +29,7 @@ From Old English ''[[iland]]''.  The S was added by confusion with French ''[[is
 *German: [[Insel]] ''f'', -n ''pl''
 *Greek: [[νησί]] (nīsi), - ά ''pl'' ([[:el:νησί|el]])
 *Hebrew: [[אי]] (Ee) ''m''
+*Ido: [[insulo]]
 *Indonesian: [[pulau]]
 *Interlingua: [[insula]]
 *{{ga}}: [[oileán]] ''m1''
