--- a/en/a/again.4310.wikitext
+++ b/en/a/again.4310.wikitext
@@ -21,6 +21,7 @@
 *French: [[denouveau]]
 *German: [[erneut]], [[noch einmal]], [[wieder]]
 *[[Hebrew]]: [[שוב]]
+*[[Ido]]: [[ankore un foyo]], [[ankorfoye]]
 *[[Indonesian]]: [[lagi]]
 *Italian: di [[nuovo]]
 *Japanese: [[また]] (mata), [[再び]] (ふたたび, futatabi)
