--- a/en/b/break.6806.wikitext
+++ b/en/b/break.6806.wikitext
@@ -14,7 +14,7 @@
 # stop functioning
 # stop working temporarily
 #: "Let's break for lunch."
-# design or make a legal but unfair move "(gaming slang")
+# design or make a legal but unfair move "(gaming slang)"
 #: "Letting white have three extra queens would break chess."
 
 ==== Synonyms ====
