--- a/en/m/muskrat.8239.wikitext
+++ b/en/m/muskrat.8239.wikitext
@@ -59,3 +59,5 @@
 *'''Ukrainian''': [[ондатра]] ([[ondatra]])
 *'''Upper Sorbian''': [[pižmo]], [[pižmowa šćura]], [[bizamowa myš]]
 *'''Welsh''': [[mwsglygoden]], [[llygoden fwsg]]
+
+[[nl:muskrat]]
