--- a/en/q/qua.4315.wikitext
+++ b/en/q/qua.4315.wikitext
@@ -14,6 +14,11 @@
 *Dutch: qua, [[als zodanig]], [[wat betreft]]
 
 ----
+==Ido==
+===Pronoun===
+# who.
+[[Category: Ido language]]
+
 ==Italian==
 ===Pronunciation===
 *[[w:IPA|IPA]]: /kwa/
