--- a/en/t/thing.7362.wikitext
+++ b/en/t/thing.7362.wikitext
@@ -28,7 +28,7 @@ From Middle English, from Old English [[þing]].
 ====Translations====
 *Arabic: [[شّيء]] (ʃajʔ)
 *Basque: [[gauza]]
-*Chinese: [[東西]] (dōngxi), [[物]] (wu), [[事物]] (shiwu)
+*Chinese: [[東西]] (dōngxī), [[物]] (wù), [[事物]] (shìwù)
 *Dutch: [[ding]] ''n''
 *Old English: [[þing]] ''n''
 *Finnish: [[asia]]
