--- a/en/s/species.4327.wikitext
+++ b/en/s/species.4327.wikitext
@@ -2,19 +2,23 @@
 
 === Etymology ===
 
-Latin: ''species'' [[view]]; [[appearance]]; [[vision]]; [[dream]]; [[semblance]] <''specere'' to [[see]] + ''-ies'' suffix signifying [[abstract]] noun
+Latin: ''species'' [[view]]; [[appearance]]; [[vision]]; [[dream]]; [[semblance]] ''specere'' to [[see]] + ''-ies'' suffix signifying [[abstract]] noun
 
 === Noun ===
-'''species''' (Plural: [[species]])
+'''species''', plural '''species'''
 
 # A group of objects having similar appearance
 #: ''This species of rock is unique to the area''
 #:''Pigeons and ducks are two species of birds.''
 # A well-differentiated form of [[organism]], more distinct than a [[variety]]
 #: ''Hence, in determining whether a form should be ranked as a species or a variety, the opinion of naturalists having sound judgment and wide experience seems the only guide to follow.'' -- Darwin, '''On the Origin of Species'''
-# A well-differentiated [[clade]] whose members are similar
-# '''Taxonomy''' The major [[subset]] of a [[genus]].  Organisms are grouped within a species because they have similar [[genotype]]s and [[phenotype]]s, their [[genetic sequence]]s are almost identical, or other evidence such as the [[fossil record]] points to recent common ancestry.  Organisms which [[reproduce]] [[sexually]] are also grouped together if they are capable of producing [[fertile]] [[offspring]] with one another through [[sex]].
-#: Note: A specific species is referred to by its genus and species in italics with the genus name capitalized (e.g. The [[cougar]] is in the genus ''Felis'' and the species ''concolor'', so its scientific name is ''Felis concolor'').
+# {{taxonomy}} A well-differentiated [[clade]] whose members are similar
+# {{taxonomy}} The major [[subset]] of a [[genus]], containing organisms with similar [[genotype]]s and [[phenotype]]s, nearly identical [[genetic sequence]]s, or recent common ancestry as indicated in the [[fossil record]]
+# {{taxonomy}} Among organisms which [[reproduce]] [[sexually]], a group capable of producing [[fertile]] [[offspring]] with one another through [[sex]].
+
+
+===Note===
+A specific species is referred to by its genus and species in italics with the genus name capitalized (e.g. The [[cougar]] is in the genus ''Felis'' and the species ''concolor'', so its scientific name is ''Felis concolor'').
 
 ==== Related Terms ====
 *[[speciate]]
@@ -52,3 +56,5 @@ Latin: ''species'' [[view]]; [[appearance]]; [[vision]]; [[dream]]; [[semblance]
 *[[binomial nomenclature]]
 
 [[de:species]]
+
+{{wikipedia}}
