--- a/en/b/break.6806.wikitext
+++ b/en/b/break.6806.wikitext
@@ -9,8 +9,6 @@
 #: "The vase fell to the floor and broke into a thousand pieces."
 # make end up in many pieces ''(transitive'')
 #: "He broke the vase."
-# stop forcefully
-#: "Break the car!"
 # stop functioning
 # stop working temporarily
 #: "Let's break for lunch."
@@ -48,8 +46,10 @@
 *Dutch: [[breken]], [[stukgaan]], [[kapotgaan]]
 *Finnish: [[hajota]] (1, 3), [[hajottaa]] (2)
 *French: [[briser]], [[casser]]
+*German: [[brechen]], [[zerbrechen]], [[kaputt]] [[machen]]
 *Esperanto: [[rompi]] (1,2), [[panei]] (3)
 *Indonesian: [[pecah|memecah]], [[pecah|memecahkan]], [[rusak|merusak]]
+*Irish: [[bris]]
 *Japanese: [[割る]] ([[わる]], waru), [[壊す]]([[こわす]], kowasu)
 *Latin: [[rumpere]], [[frangere]]
 *Spanish: [[romper]]
