--- a/en/t/then.7353.wikitext
+++ b/en/t/then.7353.wikitext
@@ -24,7 +24,7 @@ IPA: [[WEAE]] /ðɛn/
 === Translations ===
 *[[Chinese]]: [[然后]],[[而后]]
 *[[Esperanto]]: [[tiam]] (1&ndash;4, ''noun''), [[tamen]] (5)
-*[[Finnish]]: [[silloin]] (1), [[sitten]] (2, 3), [[niin]] (4), [[toisaalta]] (5)
+*[[Finnish]]: [[silloin]] (1) [[:fi:silloin|(fi)]], [[sitten]] (2, 3) [[:fi:sitten|(fi)]], [[niin]] (4) [[:fi:niin|(fi)]], [[toisaalta]] (5) [[:fi:toisaalta|(fi)]]
 *[[Indonesian]]: [[maka]] (if-then), [[kemudian]], [[lalu]], [[setelah itu]], [[selanjutnya]], [[berikutnya]]
 *[[Japanese]]: [[それから]] (sorekara), [[その後]] (sono ato, sono go), [[次]] ([[つぎ]], tsugi)
 *[[Kurdish]]: [[hingê]]
