robot  Adding:et <seize#266440>

--- a/en/s/seize.26061.wikitext
+++ b/en/s/seize.26061.wikitext
@@ -35,7 +35,9 @@
 *German: [[sechzehn]]
 *Greek: [[deka-hexei]] (modern)
 
+[[Category:French numbers]]
+
+[[et:Seize]]
 [[fr:seize]]
 [[pt:Seize]]
 [[sv:seize]]
-[[Category:French numbers]]
