--- a/en/t/theory.7354.wikitext
+++ b/en/t/theory.7354.wikitext
@@ -1,24 +1,23 @@
 ==English==
 
 ===Etymology===
-French ''théorie'', from Latin ''theoria'', from Greek ''theöria''.
+French ''[[théorie]]'', from Latin ''[[theoria]]'', from Greek ''[[θεωρία]]''.
 
 ===Noun===
-'''theory''' (plural '''theories''')
+'''theory''' (''plural:'' '''theories''')
 
-# An unproven conjecture.
-#: ''I have a theory about who broke into the school last night, but it's just a theory.''
-# An expectation of what should happen, barring unforseen circumstances.
-#: ''So we'll be there in three hours?''<br/>
-#: ''That's the theory.''
-# (''science'')  A coherent statement or set of statements that attempts to explain observed phenomena, and which has testable implications.
-#: ''There is now a well-developed theory of electrical charge.''
-# (''mathematics, uncountable'') A field of study attempting to exhaustively describe a particular class of constructs. <!-- Not quite broad enough to include "music theory".  Where do we put that? -->
-#: ''Knot theory classifies the mappings of a circle into 3-space.''
-# (''logic'') A set of axioms, together with all statements derivable from them.
-#: ''A theory is consistent if it has a model.''
+# An [[unproven]] [[conjecture]].
+#: ''I have a '''theory''' about who broke into the school last night, but it's just a '''theory'''.''
+# An [[expectation]] of what [[should]] [[happen]], [[barring]] [[unforeseen]] [[circumstances]].
+#: ''So we'll be there in three hours?'' - ''That's the '''theory'''.''
+# (''science'')  A [[coherent]] [[statement]] or set of statements that [[attempt]]s to [[explain]] [[observe]]d [[phenomenon|phenomena]], and which has [[testable]] [[implication]]s.
+#: ''There is now a well-developed '''theory''' of electrical charge.''
+# (''mathematics, uncountable'') A [[field]] of [[study]] attempting to [[exhaustive]]ly [[describe]] a particular [[class]] of [[construct]]s. <!-- Not quite broad enough to include "music theory".  Where do we put that? -->
+#: ''Knot '''theory''' classifies the mappings of a circle into 3-space.''
+# (''logic'') A [[set]] of [[axiom]]s, together with all [[statement]]s [[derivable]] from them.
+#: ''A '''theory''' is consistent if it has a model.''
 
-=== Translations to be checked===
+==== Translations to be checked====
 *Chinese: [[論]] / [[论]] (lun), [[學説]] / [[学说]] (xueshuo); [[理論]] / [[理论]] (lilun), [[道理]] (daoli)
 *Dutch: [[theorie]]
 *Finnish: [[teoria]]
