fmt; +irreg verb cat <wassen#245236>

--- a/en/w/wassen.4471.wikitext
+++ b/en/w/wassen.4471.wikitext
@@ -1,23 +1,23 @@
-==[[Dutch]]==
-
-===[[Verb]]===
+==Dutch==
+===Verb===
+'''wassen'''
 
 #to wash or clean
 #to increase
 #to rub wax on something
 
-===Translations===
+====Translations====
+*English: to [[wash]] (1), to [[clean]] (1), to [[grow]] (2), to [[rise]] (2), to [[increase]] (2), to [[become]] [[high]]er (2) and/or to become [[big]]ger (2), to [[wax]] (3)
+*German: [[waschen]] (1), [[wachsen]] (2), [[waxen]] (3)
 
-*[[English]]: to [[wash]] (1), to [[clean]] (1), to [[grow]] (2), to [[rise]] (2), to [[increase]] (2), to [[become]] [[high]]er (2) and/or to become [[big]]ger (2), to [[wax]] (3)
-*[[German]]: [[waschen]] (1), [[wachsen]] (2), [[waxen]] (3)
+===Adjective===
+'''wassen'''
 
-===[[Adjective]]===
+# made of [[wax]]; [[waxen]]
 
-made of wax
+====Translations====
+*English: [[wax]]
+*German: [[Wachs]]
 
-===Translations===
-
-*[[English]]: [[wax]]
-*[[German]]: [[Wachs]]
-
+[[Category:Dutch irregular verbs]]
 [[nl:wassen]]
