--- a/en/w/weight.7355.wikitext
+++ b/en/w/weight.7355.wikitext
@@ -12,7 +12,7 @@
 :''Compare to'' [[mass]].
 
 ==== Translations ====
-*Chinese: [[重]] (zhong), [[重量]] (zhongliang), [[砝码]] (fama)
+*Chinese: [[重]] (zhòng), [[重量]] (zhòng liàng), [[砝码]] (fá mǎ)
 *Dutch: [[gewicht]] (1,2)
 *{{fi}}: [[paino]]
 *{{fr}}: [[poids]] (1,2)
