--- a/en/d/dummy.26267.wikitext
+++ b/en/d/dummy.26267.wikitext
@@ -1,6 +1,23 @@
 ==English==
+
 ===Noun===
-# A deliberately [[nonfunctional]] [[device]] or [[tool]].  The same as a [[dud]] except that a dud is intended to work.
-# A [[pacifier]]
-# Someone who is not very bright
-# An bodily [[gesture]] meant to [[fool]] an opposing player in sport, [[feint]]s
+'''dummy'''
+
+# Something constructed with the size and form of a human, to be used in place of a person.
+#: ''To understand the effects of the accident, we dropped a dummy from the rooftop.''
+# A deliberately [[nonfunctional]] [[device]] or [[tool]] used in place of a functional one.
+#: ''The hammer and drill in the display are dummies.''
+# <!--Dialect?--> A [[pacifier]].
+# An unintelligent person.
+# <!--Dialect?--> An bodily [[gesture]] meant to [[fool]] an opposing player in sport, [[feint]]s
+# {{linguistics}} A word serving only to make a construction grammatical.
+# {{complang}} An unused parameter or value.
+# A [[ventriloquist's dummy]].
+
+===Related terms===
+*[[dummy up]]
+
+===See also===
+*[[dud]]
+*[[fake]]
+*[[feint]]
