/* Noun */ +ex <dummy#197561>

--- a/en/d/dummy.26267.wikitext
+++ b/en/d/dummy.26267.wikitext
@@ -8,10 +8,14 @@
 # A deliberately [[nonfunctional]] [[device]] or [[tool]] used in place of a functional one.
 #: ''The hammer and drill in the display are dummies.''
 # <!--Dialect?--> A [[pacifier]].
+#: ''The baby wants its dummy.''
 # An unintelligent person.
+#: ''Don't be such a dummy!''
 # <!--Dialect?--> An bodily [[gesture]] meant to [[fool]] an opposing player in sport, [[feint]]s
 # {{linguistics}} A word serving only to make a construction grammatical.
+#: ''The pronoun "it" in "It's raining" is a dummy.''
 # {{complang}} An unused parameter or value.
+#: ''If <code>flag1</code> is false, the other parameters are dummies.''
 # A [[ventriloquist's dummy]].
 
 ===Related terms===
