--- a/en/d/dummy.26267.wikitext
+++ b/en/d/dummy.26267.wikitext
@@ -1,25 +1,28 @@
 ==English==
-
 ===Noun===
-'''dummy'''
+'''dummy''' ([[dummies]])
 
 # Something constructed with the size and form of a human, to be used in place of a person.
-#: ''To understand the effects of the accident, we dropped a dummy from the rooftop.''
+#: ''To understand the effects of the accident, we dropped a '''dummy''' from the rooftop.''
 # A deliberately [[nonfunctional]] [[device]] or [[tool]] used in place of a functional one.
-#: ''The hammer and drill in the display are dummies.''
-# <!--Dialect?--> A [[pacifier]].
-#: ''The baby wants its dummy.''
+#: ''The hammer and drill in the display are '''dummies'''.''
+# (''Australia'') A [[pacifier]].<!-- probably british too -->
+#: ''The baby wants its '''dummy'''.''
 # An unintelligent person.
-#: ''Don't be such a dummy!''
+#: ''Don't be such a '''dummy'''!''
 # <!--Dialect?--> An bodily [[gesture]] meant to [[fool]] an opposing player in sport, [[feint]]s
 # {{linguistics}} A word serving only to make a construction grammatical.
-#: ''The pronoun "it" in "It's raining" is a dummy.''
+#: ''The pronoun "it" in "It's raining" is a '''dummy'''.''
 # {{complang}} An unused parameter or value.
-#: ''If <code>flag1</code> is false, the other parameters are dummies.''
+#: ''If <code>flag1</code> is false, the other parameters are '''dummies'''.''
 # A [[ventriloquist's dummy]].
 
-===Related terms===
+====Related terms====
+*[[dumb]]
 *[[dummy up]]
+
+====Translations====
+*Dutch: [[fopspeen]] (3), [[speen]] (3) [[Category:Dutch nouns with incomplete gender]]
 
 ===See also===
 *[[dud]]
