--- a/en/d/dummy.26267.wikitext
+++ b/en/d/dummy.26267.wikitext
@@ -6,7 +6,7 @@
 #: ''To understand the effects of the accident, we dropped a '''dummy''' from the rooftop.''
 # A deliberately [[nonfunctional]] [[device]] or [[tool]] used in place of a functional one.
 #: ''The hammer and drill in the display are '''dummies'''.''
-# (''Australia'') A [[pacifier]].<!-- probably british too -->
+# (''Australia'' & ''UK'') A [[pacifier]].<!-- probably british too ...yep ;)-->
 #: ''The baby wants its '''dummy'''.''
 # An unintelligent person.
 #: ''Don't be such a '''dummy'''!''
