--- a/en/m/maximum.34063.wikitext
+++ b/en/m/maximum.34063.wikitext
@@ -18,7 +18,7 @@ French from Latin ''[[maxim]]'' + ''[[-um]]''
 *[[minimum]]
 
 ====Translations====
-*Chinese: [[最]][[大]] (1), [[極]][[大]][[值]] (2)
+*Chinese: [[最]][[大]] (zui da, zui4 da4) (1), [[極]][[大]][[值]] (zuidazhi, zui4da4zhi2) (2)
 *Finnish: [[maksimi]]
 *French: maximum
 *Latin: maximum
