--- a/en/d/dud.26266.wikitext
+++ b/en/d/dud.26266.wikitext
@@ -1,6 +1,14 @@
 {{-en-}}
 {{-etym-}}
-Ultimately ''dudde''- ragged clothing ''(of uncertain origin, 1500's)''
+Ultimately ''[[dudde]]''- ragged clothing ''(of uncertain origin, 1500's)''
+
+===Pronunciation===
+*dŭd, /dʌd/, /<tt>dVd</tt>/
+*:[[Rhymes:English:-ʌd|Rhymes: -ʌd]]
+
 {{-noun-}}
+'''dud''' ([[duds]])
+
 # A broken or nonfunctional device that does not perform its intended function, such as a [[bomb]]
+
 [[it:dud]]
