complete overhaul; now in exciting format <break#198781>

--- a/en/b/break.6806.wikitext
+++ b/en/b/break.6806.wikitext
@@ -1,72 +1,203 @@
-===Pronunciation===
-*brāk, /breɪk/, /breIk/
-*:'''Homophones''': [[brake]]
-[[Category:Tennis]]
-=== Verb ===
-'''break''' ([[breaks]], [[broke]], [[broken]], [[breaking]])
+==English==
+===Etymology===
+Old English ''[[brecan]]''. Confer Dutch ''[[breken]]'', German ''[[brechen]]'', and Gothic ''[[brikan]]''. Cognate with Latin ''[[frangere]]'', "to break".
+==== Verb ====
+{| border=0 width=100%
+|-
+|bgcolor="#fff3f3" valign=top width=20%|
+{|
+''infinitive''<br>
+'''to break'''<br>
+*[[Pronunciation guide|AHD]]: /brāk/
+*[[Pronunciation guide|IPA]]: /breɪk/
+*[[Pronunciation guide|SAMPA]]: /breIk/
+*''Homophones:'' [[brake]]
+|}
+| width=1% |
+|bgcolor="#fff3f3" valign=top width=20%|
+{|
+''third person singular''<br>
+'''breaks'''
+*[[Pronunciation guide|IPA]]: /breɪks/
+*''Homophones:'' [[brake]]s 
+|}
+| width=1% |
+|bgcolor="#fff3f3" valign=top width=20%|
+{|
+''past tense''<br>
+'''broke'''
+*[[Pronunciation guide|IPA]]: /brəʊk/
+|}
+| width=1% |
+|bgcolor="#fff3f3" valign=top width=20%|
+{|
+''past participle''<br>
+'''broken'''
+*[[Pronunciation guide|IPA]]: /brəʊkən/, /brəʊkən/
+|}
+| width=1% |
+|bgcolor="#fff3f3" valign=top width=20%|
+{|
+''present participle''<br>
+'''breaking'''
+*[[Pronunciation guide|IPA]]: /breɪkɪŋ/
+*''Homophones:'' [[brake|braking]]
+|}
+|}
 
-# end up in many pieces ''(intransitive)''
-#: "The vase fell to the floor and broke into a thousand pieces."
-# make end up in many pieces ''(transitive'')
-#: "He broke the vase."
-# stop functioning
-# stop working temporarily
-#: "Let's break for lunch."
-# design or make a legal but unfair move "(gaming slang)"
-#: "Letting white have three extra queens would break chess."
+=====Intransitive=====
+# to [[end up]] in many [[piece]]s; to become [[shatter]]ed
+#: ''The vase fell to the floor and '''broke''' into a thousand pieces.''
+# to [[stop]] [[function]]ing [[properly]] or [[altogether]]
+#:''I think the fridge is '''broken'''.''
+# to [[interrupt]] or [[cease]] one's [[work]] or [[occupation]] [[temporary|temporarily]]
+#:''Let's '''break''' for lunch.''
+#(''tennis'') to win a game as [[receiver]] or receivers (in case of a [[double]])
+#(''billiards'') to make the [[first]] [[shot]]
+#:''Is it your or my turn to '''break'''?''
+======Synonyms and antonyms======
+{| border=0 width=100%
+|-
+|bgcolor="#FFFFE0" valign=top width=48%|
+{|
+<!--synonyms go here-->
+# [[burst]], [[shatter]], [[smash]]
+#<br>
+# [[pause]]
+|}
+| width=1% |
+|bgcolor="#FFFFE0" valign=top width=48%|
+{|
+<!--antonyms go here-->
+#<br>
+#<br>
+#[[continue]], [[resume]]
+|}
+|}
 
-==== Synonyms ====
-*[[destroy]]
-*[[shatter]]
-*[[smash]]
+======Translations======
+{| border=0 width=100%
+|-
+|bgcolor="#FFFFE0" valign=top width=48%|
+{|
+<!--languages from A to I go here-->
+*Esperanto: [[rompi]] (1), [[panei]] (2)
+*Finnish: [[hajota]] (1,2)
+|}
+| width=1% |
+|bgcolor="#FFFFE0" valign=top width=48%|
+{|
+<!--languages from J to Z go here-->
+*Swedish: [[gå]] [[sönder]] (1,2)
+|}
+|}
 
-====Related terms====
-*[[breakage]]
-*[[breakthrough]]
-*[[break a leg]]
-*[[break away]]
-*[[break down]]
-*[[break even]]
-*[[break in]]
-*[[break into]]
-*[[break new ground]]
-*[[break off]]
-*[[break out]]
-*[[break ranks]]
-*[[break the ice]]
-*[[break through]]
-*[[break up]]
-*[[break wind]]
-*[[heartbreak]]
-*[[icebreaker]]
+=====Transitive=====
+# to [[cause]] to [[end up]] in many [[piece]]s
+#: ''He '''broke''' the vase.''
+# to cause a person or animal to [[lose]] his/her/its [[will]], which is usually obtained by means of [[torture]]
+#:''You have to '''break''' an elephant before you can use it as an animal of burden.''
+#:'''''Breaking''' a man will make him obedient.''
+#(''gaming slang'') to [[design]] or make a [[legal]] but [[unfair]] [[move]]
+#: ''Letting white have three extra queens would '''break''' chess.''
 
-==== Translations ====
+======Synonyms and antonyms======
+{| border=0 width=100%
+|-
+|bgcolor="#FFFFE0" valign=top width=48%|
+{|
+<!--synonyms go here-->
+#[[destroy]], [[shatter]], [[smash]]
+|}
+| width=1% |
+|bgcolor="#FFFFE0" valign=top width=48%|
+{|
+<!--antonyms go here-->
+#[[assemble]], [[join]], [[repair]]
+|}
+|}
+
+====== Translations ======
+{| border=0 width=100%
+|-
+|bgcolor="#FFFFE0" valign=top width=48%|
+{|
+<!--languages from A to I go here-->
+*Esperanto: [[rompi]] (1)
+*Finnish: [[hajottaa]] (1)
+*German: [[zerbrechen]] (1), [[kaputt]] [[machen]] (1)
+|}
+| width=1% |
+|bgcolor="#FFFFE0" valign=top width=48%|
+{|
+<!--languages from J to Z go here-->
+*Swedish: [[ha]] [[sönder]] (1)
+|}
+|}
+
+=====Translations to be checked=====
 *Chumash (Inezeño): [[kʼot]]
 *Danish: [[bryde]], [[brække]]
 *Dutch: [[breken]], [[stukgaan]], [[kapotgaan]]
-*Finnish: [[hajota]] (1, 3), [[hajottaa]] (2)
 *French: [[briser]], [[casser]]
-*German: [[brechen]], [[zerbrechen]], [[kaputt]] [[machen]]
-*Esperanto: [[rompi]] (1,2), [[panei]] (3)
 *Indonesian: [[pecah|memecah]], [[pecah|memecahkan]], [[rusak|merusak]]
 *Irish: [[bris]]
 *Japanese: [[割る]] ([[わる]], waru), [[壊す]]([[こわす]], kowasu)
 *Latin: [[rumpere]], [[frangere]]
 *Spanish: [[romper]]
-*Swedish: [[gå]] [[sönder]] (1, 3), [[ha]] [[sönder]] (2)
 
-=== Noun ===
-'''break''' (plural: [[breaks]])
+====Noun====
+{| border=0 width=100%
+|-
+|bgcolor="#fff3f3" valign=top width=48%|
+{|
+''singular''<br>
+'''break'''
+*[[Pronunciation guide|AHD]]: /brāk/
+*[[Pronunciation guide|IPA]]: /breɪk/
+*[[Pronunciation guide|SAMPA]]: /breIk/
+*''Homophones:'' [[brake]]
+|}
+| width=1% |
+|bgcolor="#fff3f3" valign=top width=48%|
+{|
+''plural''<br>
+'''breaks'''
+*[[Pronunciation guide|IPA]]: /breɪks/
+*''Homophones:'' [[brake]]s
+|}
+|}
 
-# a rest or pause (generally from work)
-#: "Let's take a five-minute break."
+# a [[rest]] or [[pause]], usually from [[work]]
+#: ''Let's take a five-minute '''break'''.''
+#(''tennis'') a [[game]] won by the [[receive|receiving]] [[player]] or players (in case of a [[double]])
+#(''billiards'') the first [[shot]] in a game of [[billiards]]
 
-==== Translations ====
-*Esperanto: [[paŭzi]]
-*Finnish: [[tauko]]
-*French: [[pause]]
-*Polish: [[przerwa]]
-*Swedish: [[rast]] ''c'', [[paus]] ''c''
+===== Translations =====
+{| border=0 width=100%
+|-
+|bgcolor="#FFFFE0" valign=top width=48%|
+{|
+<!--languages from A to I go here-->
+*Esperanto: [[paŭzi]] (1)
+*Finnish: [[tauko]] (1)
+*French: [[pause]] (1)
+*German: [[Pause]] ''f'' (1), [[Break]] ''n'' (2)
+|}
+| width=1% |
+|bgcolor="#FFFFE0" valign=top width=48%|
+{|
+<!--languages from J to Z go here-->
+*Polish: [[przerwa]] (1)
+*Swedish: [[rast]] ''c'' (1), [[paus]] ''c'' (1)
+|}
+|}
+
+====Derived terms====
+[[breakage]], [[breakthrough]], [[break a leg]], [[break away]], [[break down]], [[break even]], [[break in]], [[break into]], [[break new ground]], [[break off]], [[break out]], [[break ranks]], [[break the ice]], [[break through]], [[break up]], [[break wind]], [[heartbreak]], [[icebreaker]]
+
+
+[[Category:Tennis]]
 
 [[it:break]]
 [[hu:break]]
