--- a/en/p/pig.8244.wikitext
+++ b/en/p/pig.8244.wikitext
@@ -29,7 +29,7 @@
 *[[Catalan]]: [[porc]] ''m'', [[truja]] ''f''
 *[[Cebuano]]: [[baboy]]
 *CJK Characters: [[豬]], [[猪]]; [[豚]]
-*Chinese: [[豬]], [[猪]] (zhū, zhu, zhu1)
+*Chinese: [[豬]], [[猪]] (zhū, zhu, [[zhu1]])
 *Croatian: [[svinja]]
 *Czech: [[prase]]
 *Danish: [[svin]]
