--- a/en/c/CD-R.26223.wikitext
+++ b/en/c/CD-R.26223.wikitext
@@ -1,8 +1,8 @@
-==Abbreviation==
+==English==
 
-Compact Disk - Read Only#
-**
+==={{Abbreviation}}===
+'''CD-R'''
+# Compact Disk - Read only or Compact Disk - Recordable; a form of digital media that is based on the use of a laser to read from a plastic disc.  It can only be written to once.
 
-==Noun==
-
-A form of digital media that is based on the use of a laser to read from a plastic disc.  It can only be written to once.
+===External links===
+{{pedialite}}
