/* Etymology */ fixing etymology <cop#203756>

--- a/en/c/cop.26062.wikitext
+++ b/en/c/cop.26062.wikitext
@@ -1,10 +1,14 @@
 ==English==
 ===Noun===
 ===Etymology===
-short for copper,because early [[NYPD]] outfits had copper buttons
+Short for [[copper]] "police officer", itself from "cop" below ("one who cops", e.g. criminals).  
+
+Sometimes explained as deriving from copper buttons or badges of early [[NYPD]] uniforms, though this is often stated to be a [[folk etymology]].
+
 # (slang) [[Police]] officer.
 ====Translations====
 *{{sk}}: [[poliš]] ''m'', [[hekáč]] ''m''
+
 ===Verb===
 ===Etymology===
 cop, verb  from capere, Latin and Old French 
