--- a/en/f/ferret.8237.wikitext
+++ b/en/f/ferret.8237.wikitext
@@ -5,7 +5,8 @@
 === Noun ===
 {{wikipedia}}
 '''ferret''' ([[ferrets]])
-#A mammal, ''Mustela putorius furo'', rather like a [[weasel]], but was originally breed from the [[polecat]] and often trained to [[hunt]] [[rat]]s or [[rabbit]]s in England.
+#A [[mammal]], ''Mustela putorius furo'', rather like a [[weasel]], but was originally breed from the [[polecat]] and often trained to [[hunt]] [[rat]]s or [[rabbit]]s in [[England]].
+
 ===Verb===
 '''ferret'''
 #To hunt [[game]] with ferrets
