--- a/en/v/vodka.34100.wikitext
+++ b/en/v/vodka.34100.wikitext
@@ -12,6 +12,7 @@
 ====Translations====
 *Brithenig: [[fodka]] ''f''
 *Bulgarian: [[водка]] ''f''
+*Estonian: [[viin]]
 *German: [[Wodka]] ''m''
 *Polish: [[wódka]] ''f''
 *Russian: [[водка]] ''f''
