/* English */ Regular verb inflection template <bet#247446>

--- a/en/b/bet.6795.wikitext
+++ b/en/b/bet.6795.wikitext
@@ -4,7 +4,9 @@
 *[[w:IPA|IPA]]: /ˈbεt/
 
 === Verb ===
-'''to bet''' ([[bet]] / [[betted]], [[bet]] / [[betted]])
+{{en-infl-reg-consonant|bet||t}}
+
+'''to bet''' ([[bet]], [[bet]])
 
 # to [[gamble]]
 # to be [[sure]] of something, to be able to [[count]] on something
