/* Translations */ +sv <at#209526>

--- a/en/a/at.3964.wikitext
+++ b/en/a/at.3964.wikitext
@@ -97,6 +97,7 @@ Middle English < Old English '''[[æt]]''' < Proto-Germanic '''*at''', '''*az'''
 *Portuguese: [[a#Portuguese|a]]
 *Russian: [[в]] (v)
 *Spanish: [[a#Spanish|a]]
+*{{sv}}: [[vid]]
 |}
 |}
 
