--- a/en/a/at.3964.wikitext
+++ b/en/a/at.3964.wikitext
@@ -159,6 +159,7 @@ Middle English < Old English '''[[æt]]''' < Proto-Germanic '''*at''', '''*az'''
 # [[horse]]
 
 [[Category:English prepositions]]
+[[Category:100 English basic words]]
 
 [[it:at]]
 [[la:At]]
