trying to untangle sv: ... <at#233951>

--- a/en/a/at.3964.wikitext
+++ b/en/a/at.3964.wikitext
@@ -63,7 +63,10 @@ Middle English < Old English '''[[æt]]''' < Proto-Germanic '''*at''', '''*az'''
 *Portuguese: [[a#Portuguese|a]], [[em]]
 *Russian: [[в]] (v), [[на]] (na), [[при]] (pri), [[у]] (u), [[возле]] (vózle)
 *Spanish: [[a#Spanish|a]], [[en#Spanish|en]]
-*Swedish: [[på]] 
+*Swedish: [[på]], [[vid]], (''not always directly translated '')
+*:''At home'' = ''hemma''
+*:''At work'' = ''på jobbet''
+*:''At the table'' = ''vid bordet''
 *Thai: [[ณ]] (nā)
 *Turkish: [[-da]], [[-de]]
 *Vietnamese: [[ở tại]], [[lúc]], [[vào]]
@@ -97,7 +100,9 @@ Middle English < Old English '''[[æt]]''' < Proto-Germanic '''*at''', '''*az'''
 *Portuguese: [[a#Portuguese|a]]
 *Russian: [[в]] (v)
 *Spanish: [[a#Spanish|a]]
-*{{sv}}: [[vid]]
+*{{sv}}: [[vid]] (''not always translated'')
+*:''At five o'clock'' = ''klockan fem'' or ''vid fem'' (''informal'')
+*:''At midnight'' = ''vid midnatt''
 |}
 |}
 
@@ -131,6 +136,8 @@ Middle English < Old English '''[[æt]]''' < Proto-Germanic '''*at''', '''*az'''
 *Russian: [[в]] (v), [[на]] (na)
 *Spanish: [[a#Spanish|a]]
 *Swedish: [[på]], [[mot#Swedish|mot]] 
+*:''Han kastade sten mot mig'' = ''He threw stones at (=towards) me''
+*:''Han kastade sten på mig'' = ''He threw stones at me'' (''...and it hit'')
 *Thai: [[ณ]] (nā)
 |}
 |}
