--- a/en/w/weight.7355.wikitext
+++ b/en/w/weight.7355.wikitext
@@ -26,12 +26,12 @@
 *{{es}}: [[peso]]
 *{{sv}}: [[vikt]] (1,2)
 
-== Verb ==
-
-== Translations ==
-
-*{{fr}}: [[pondérer]]
-
 ==== Related terms ====
 *[[weigh]]
 [[Category:1000 English basic words]]
+
+== Verb ==
+
+=== Translations ===
+
+*{{fr}}: [[pondérer]]
