--- a/en/w/weight.7355.wikitext
+++ b/en/w/weight.7355.wikitext
@@ -30,8 +30,8 @@
 *[[weigh]]
 [[Category:1000 English basic words]]
 
-== Verb ==
+=== Verb ===
 
-=== Translations ===
+==== Translations ====
 
 *{{fr}}: [[pondérer]]
