--- a/en/w/weight.7355.wikitext
+++ b/en/w/weight.7355.wikitext
@@ -1,3 +1,4 @@
+==English==
 ===Pronunciation===
 ====Homophones====
 *[[wait]]
@@ -24,7 +25,7 @@
 *{{ja}}: [[重さ]] ([[おもさ]], omosa), [[重量]] ([[じゅうりょう]], jūryō), [[体重]] ([[たいじゅう]], taijū)→(person,animal)
 *Romanian: [[greutate]] ''f''
 *{{es}}: [[peso]]
-*{{sv}}: [[vikt]] (1,2)
+*{{sv}}: [[vikt]] ''c'' (1,2,3)
 
 ==== Related terms ====
 *[[weigh]]
