robot  Adding:es <break#247457>

--- a/en/b/break.6806.wikitext
+++ b/en/b/break.6806.wikitext
@@ -214,6 +214,7 @@ Old English ''[[brecan]]''. Confer Dutch ''[[breken]]'', German ''[[brechen]]'',
 
 [[Category:Tennis]]
 
+[[es:break]]
 [[it:break]]
 [[hu:break]]
 [[pl:Break]]
