--- a/en/t/thing.7362.wikitext
+++ b/en/t/thing.7362.wikitext
@@ -26,48 +26,48 @@ From Middle English, from Old English [[þing]].
 *[[thingy]]
 
 ====Translations====
-*Albanian: send
-*Arabic: [[شّيء]] (ʃajʔ)
-*Basque: [[gauza]]
+*Albanian: [[send]]
+*Arabic: [[شيء|شّيء]] (ʃajʔ)
+*[[Basque]]: [[gauza]]
 *Cantonese: [[東西]] (dung1 sai1), [[物]] (mat6), [[事物]] (si6 mat6)
-
 *Chinese: [[東西]] (dōngxī), [[物]] (wù), [[事物]] (shìwù)
+*CJKV Characters: [[物]], [[事]]
 *Dutch: [[ding]] ''n''
-*Old English: [[þing]] ''n''
-*Estonian: asi, ese
+*Estonian: [[asi]], [[ese]]
 *Finnish: [[asia]]
 *French:  [[chose]] ''f'', [[truc]] ''m'', [[machin]] ''m'' (informal)
 *[[Frisian]]: [[ding]] ''n''
-*German: [[Thing]] ''m,f,n??'' (1), [[Ding]] ''n'' (2,3)
-*Galician: cousa
-*[[Greek]]: πράγμα (prágma)
+*German: Thing ''m,f,n??'' (1), [[Ding]] ''n'' (2,3)
+*[[Galician]]: [[cousa]]
+*Greek: [[πράγμα]] (prágma)
 *[[Guarani]]: [[mba'e]]
-*Gujarati: વસ્તુ
+*[[Gujarati]]: [[વસ્તુ]]
 *[[Hindi]]: [[वस्तू]], [[चीज़]]
-*Hungarian: dolog
+*Hungarian: [[dolog]]
 *[[Ido]]: [[kozo]]
 *Indonesian: [[benda]], [[barang]], [[makhluk]]
 *[[Interlingua]]: [[cosa]]
-*[[Irish]]: rud, ní
+*[[Irish]]: [[rud]], [[ní]]
 *Italian: [[cosa]] ''f''
 *Japanese: [[物]] ([[もの]], mono), [[事]] ([[こと]], koto)
 *Latin: [[rēs]]
-*Latvian: lieta
-*Marathi: वस्तु (vastu)
+*Latvian: [[lieta]]
+*[[Marathi]]: [[वस्तु]] (vastu)
 *Norwegian: [[ting]], [[dings]], [[greie]]''m''
+*[[Old English]]: [[þing]] ''n''
 *[[Persian]]: [[چيز]] (čiz)
 *Polish: [[rzecz]] ''f''
 *Portuguese: [[coisa]] ''f''
 *Romanian: [[lucru]] ''n''
-*[[Russian]]: вещь (vesch')
-*Sanskrit: वस्तु (vastu)
-*Serbian: ствар (stvar)
+*Russian: [[вещь]] (vesch')
+*[[Sanskrit]]: [[वस्तु]] (vastu)
+*Serbian: [[ствар]], [[stvar]]
 *Spanish: [[cosa]] ''f''
 *Swedish: [[sak]]
 *[[Tupinambá]]: [[mba'e]]
-*[[Welsh]]: peth
+*[[Welsh]]: [[peth]]
 
+[[Category:1000 English basic words]]
 [[fr:thing]]
 [[it:thing]]
 [[la:Thing]]
-[[Category:1000 English basic words]]
