--- a/en/c/CD-ROM.26226.wikitext
+++ b/en/c/CD-ROM.26226.wikitext
@@ -1,10 +1,8 @@
-==Abbreviation==
+==English==
 
-Compact Disk - Read Only Memory
-
-==Noun==
-
-A device that can read [[CD]]s (Compact Disks), but cannot write to them.  Additionally, this is also a class of Compact Disks that are manufactured with the data and shipped, but cannot be written to at all.
+==={{Abbreviation}}===
+'''CD-ROM''' ''or'' '''[[CD ROM]]'''
+# ''part {{Initialism}}'' Compact Disk - ''{{acronym}}'' Read Only Memory.  A device that can read [[CD]]s (Compact Disks), but cannot write to them.  Additionally, this is also a class of Compact Disks that are manufactured with the data and shipped, but cannot be written to at all.
 
 [[de:CD-ROM]]
 [[fr:CD-ROM]]
