--- a/en/d/DOJ.26215.wikitext
+++ b/en/d/DOJ.26215.wikitext
@@ -1,4 +1,8 @@
-== Abbreviation ==
-#Department of Justice
+==English==
 
-http://www.usdoj.gov/
+==={{Abbreviation}}===
+'''DOJ'''
+# Department of Justice
+
+===External links===
+* http://www.usdoj.gov/
