--- a/en/d/DVD-RW.26218.wikitext
+++ b/en/d/DVD-RW.26218.wikitext
@@ -1,7 +1,5 @@
-==Abbreviation==
+==English==
 
-Digital Versatile Disk - Read Writeable
-
-==Noun==
-
-A form of digital media that is similar to a CD, but has far denser capacity and can be written to more than once.
+==={{Initialism}}===
+'''DVD-RW'''
+# Digital Versatile Disk - Read Writeable.  A form of digital media that is similar to a CD, but has far denser capacity and can be written to more than once.
