--- a/en/p/pledge.7357.wikitext
+++ b/en/p/pledge.7357.wikitext
@@ -1,9 +1,16 @@
-==Verb==
-
-#To [[promise]]
-
-==Translations==
-
+==English==
+===Verb===
+'''to pledge'''  (''transitive'' and ''intransitive''
+# To make a [[solemn]] [[promise]] (to do something)
+# To [[deposit]] something as a [[security]]; to [[pawn]]
+====Translations to be checked====
 *French: [[promettre]]
-
 *German: [[zusichern]], [[versprechen]]
+
+===Noun===
+'''pledge'''
+# A solemn promise to do something
+# A security to [[guarantee]] [[payment]] of a [[debt]]
+# A [[drinking]] [[toast]]
+'''the pledge'''
+# A promise to [[abstain]] from [[drinking]] [[alcohol]]
