--- a/en/w/whistle.7360.wikitext
+++ b/en/w/whistle.7360.wikitext
@@ -33,6 +33,7 @@
 *[[Finnish]]: [[pilli]] (1), [[vihellys]] (2) (3), [[vislaus]] (2)
 *[[French]]: [[sifflet]] ''m''
 *[[Indonesian]]: [[peluit]]
+*[[Irish]]: [[feadog]]
 *[[Japanese]]: [[笛]] ([[ふえ]], fue)
 *[[Polish]]: [[gwizd]] ''m'' (2,3) [[gwizdek]] ''m'' (1)
 [[Category:1000 English basic words]]
