capitalization of words in links <mundo#479569>

--- a/en/m/mundo.4430.wikitext
+++ b/en/m/mundo.4430.wikitext
@@ -17,7 +17,7 @@
 
 ===Synonyms===
 
-*[[Orbe]] : this world is less used than mundo
+*[[orbe]] : this world is less used than mundo
 
-[[hu:Mundo]]
-[[pt:Mundo]]
+[[hu:mundo]]
+[[pt:mundo]]
