--- a/en/i/island.4316.wikitext
+++ b/en/i/island.4316.wikitext
@@ -1,7 +1,5 @@
-{{Wikipedia}}
-
 ==English==
-
+{{Wikipedia}}
 ====Etymology====
 From Old English ''[[iland]]''.  The S was added by confusion with French ''[[isle]]'', which is not related but is instead from Latin ''[[insula]]''. Anglo-Saxon ''[[&#299;egland]]'', pleonastic for ''[[&#299;eg]]'', "island", "watery land". Cognate with German ''[[Aue]]'', "meadow", and Latin ''[[aqua]]''. Confer German ''[[Eiland]]'', Old Norse ''[[eyland]]'', and English ''[[ey]]'' as in [[Anglesey]], [[Bardsey]], [[Ely]].
 
@@ -60,90 +58,6 @@ From Old English ''[[iland]]''.  The S was added by confusion with French ''[[is
 *[[cay]]
 *[[continent]]
 *[[key]]
+*[[Island]] - [[Iceland]] in other languages
 
-
-----
-==Breton==
-===Proper noun===
-'''Island'''
-
-#[[Iceland]]
-----
-
-==Czech==
-===Proper noun===
-'''Island'''
-
-#[[Iceland]]
-----
-
-==Danish==
-===Proper noun===
-'''Island'''
-
-#[[Iceland]]
-----
-
-==Estonian==
-===Proper noun===
-'''Island'''
-
-#[[Iceland]]
-----
-
-==German==
-===Proper noun===
-'''Island'''
-
-#[[Iceland]]
-----
-
-==Icelandic==
-===Proper noun===
-'''Island'''
-
-#[[Iceland]]
-
-----
-
-==Norwegian==
-===Proper noun===
-'''Island'''
-
-#[[Iceland]]
-----
-
-== Slovak ==
-=== Proper Noun ===
-'''Island''' ''m'', '''Islandy''' ''pl''
-
-==== Singular ====
-* ''[[nominative|nom]]'' '''Island'''
-* ''[[genitive|gen]]'' '''Islandu'''
-* ''[[dative|dat]]'' '''Islandu'''
-* ''[[accusative|acc]]'' '''Island'''
-* ''[[vocative|voc]]'' '''Island'''
-* ''[[locative|loc]]'' '''Islande'''
-* ''[[instrumental|ins]]'' '''Islandom'''
-
-==== Plural ====
-* ''[[nominative|nom]]'' '''Islandy'''
-* ''[[genitive|gen]]'' '''Islandov'''
-* ''[[dative|dat]]'' '''Islandom'''
-* ''[[accusative|acc]]'' '''Islandy'''
-* ''[[vocative|voc]]'' '''Islandy'''
-* ''[[locative|loc]]'' '''Islandoch'''
-* ''[[instrumental|ins]]'' '''Islandami'''
-
-=== Derived Words ===
-* [[Islanďan]]
-* [[islandčina]]
-* [[islandský#Slovak|islandský]], [[islandský#Slovak|islandská]], [[islandský#Slovak|islandské]]
-
-----
-==Swedish==
-===Proper noun===
-'''Island'''
-
-#[[Iceland]]
 [[Category:1000 English basic words]]
