--- a/en/b/blow.6803.wikitext
+++ b/en/b/blow.6803.wikitext
@@ -1,4 +1,6 @@
 ==English==
+===Etymology===
+{{OE.}} ''blawan'' "make an air current, sound a wind instrument" (past tense ''bleow'', pp. ''blawen''), from Proto-Germanic *''blæ-anan'', from Proto-Indo-European ''*bhle-'' "to swell, blow up"
 
 === Pronunciation ===
 *[[w:SAMPA|SAMPA]]: /'blOU/
