robot  Adding: io <break#501568>

--- a/en/b/break.6806.wikitext
+++ b/en/b/break.6806.wikitext
@@ -213,7 +213,9 @@ Old English ''[[brecan]]''. Confer Dutch ''[[breken]]'', German ''[[brechen]]'',
 
 [[Category:English homophones]]
 [[Category:Tennis]]
+
 [[es:break]]
+[[io:Break]]
 [[it:break]]
 [[hu:break]]
 [[pl:Break]]
