robot  Adding: io, de <dame#502337>

--- a/en/d/dame.26261.wikitext
+++ b/en/d/dame.26261.wikitext
@@ -16,6 +16,8 @@ Via Norman French from Latin ''[[dama]]'', '''woman'''
 *[[madame]]
 *[[sir]]
 
+[[de:Dame]]
 [[et:Dame]]
 [[fr:dame]]
+[[io:Dame]]
 [[fi:Dame]]
