robot  Adding: pl <thing#506444>

--- a/en/t/thing.7362.wikitext
+++ b/en/t/thing.7362.wikitext
@@ -68,6 +68,8 @@ From Middle English, from Old English [[þing]].
 *[[Welsh]]: [[peth]]
 
 [[Category:1000 English basic words]]
+
 [[fr:thing]]
 [[it:thing]]
 [[la:Thing]]
+[[pl:Rzecz]]
