robot  Adding: it <rabbit#508472>

--- a/en/r/rabbit.8241.wikitext
+++ b/en/r/rabbit.8241.wikitext
@@ -111,5 +111,6 @@ From [[Cockney rhyming slang]] ''rabbit and pork'', to talk.
 
 [[es:rabbit]]
 [[io:Rabbit]]
+[[it:rabbit]]
 [[nl:rabbit]]
 [[zh:Rabbit]]
