--- a/en/s/species.4327.wikitext
+++ b/en/s/species.4327.wikitext
@@ -60,4 +60,5 @@ A specific species is referred to by its genus and species in italics with the g
 [[Category:English irregular plurals]]
 
 [[de:species]]
+[[it:species]]
 [[nl:species]]
