--- a/en/b/break.6806.wikitext
+++ b/en/b/break.6806.wikitext
@@ -51,7 +51,7 @@ Old English ''[[brecan]]''. Confer Dutch ''[[breken]]'', German ''[[brechen]]'',
 #(''medicine'') (of a [[bone]]) to become [[damage]]d or [[crack]] through a [[sudden]] [[physical]] [[strain]], such as a [[collision]]
 #:''My shin bone '''broke''' when I fell down stairs last week.''
 # to [[stop]] [[function]]ing [[properly]] or [[altogether]]
-#:''I think the fridge is '''broken'''.''
+#:''I think you '''broke''' the fridge.''
 # to [[interrupt]] or [[cease]] one's [[work]] or [[occupation]] [[temporary|temporarily]]
 #:''Let's '''break''' for lunch.''
 <!--I'm not quite sure about this one. Anyone who plays tennis?
