--- a/en/t/though.7361.wikitext
+++ b/en/t/though.7361.wikitext
@@ -1,4 +1,5 @@
 ==English==
+
 ===Etymology===
 Middle English [[þoȝ]], borrowed from a Scandinavian source such as Old Norse [[þó]].
 
@@ -15,10 +16,10 @@ Middle English [[þoȝ]], borrowed from a Scandinavian source such as Old Norse 
 
 ===Conjunction===
 '''though'''
-#despite the fact that; [[although]].
-#:''Though it's risky, it's worth taking the chance.''
-#[[however]]
-#:''I will not go there if I'm not secure, though.''
+# Despite the fact that; [[although]].
+#:'''''Though''' it's risky, it's worth taking the chance.''
+# [[however|However]].
+#:''I will not go there if I'm not secure, '''though'''.''
 
 ====Synonyms====
 *(1) [[although]], even though
@@ -36,8 +37,8 @@ Middle English [[þoȝ]], borrowed from a Scandinavian source such as Old Norse 
 
 ===Adverb===
 '''though'''
-#despite that fact.
-#:''I will do it, though.''
+# Despite that fact.
+#:''I will do it, '''though'''.''
 
 ====Synonyms====
 *[[all the same]]
