--- a/en/c/cauliflower.34088.wikitext
+++ b/en/c/cauliflower.34088.wikitext
@@ -12,15 +12,16 @@
 *Finnish: [[kukkakaali#Finnish|kukkakaali]]
 *French: [[chou-fleur]] ''m''
 *German: [[Blumenkohl]] ''m''
-*{{hu}}: [[karfiol]]
+*Hungarian: [[karfiol]]
 *Italian: [[cavolfiore]] ''m''
 *Portuguese: [[couve-flor]] ''f''
 *Romanian: [[conopidă]] ''f''
 *Spanish: [[coliflor]] ''f''
-*{{sv}}: [[blomkål]]
+*Swedish: [[blomkål]]
 *Urdu: [[گوبى]]
 
-[[category:food]]
+[[category:Vegetables]]
+[[Category:Plants]]
 
 [[io:Cauliflower]]
 [[it:cauliflower]]
