--- a/en/a/ain’t.34105.wikitext
+++ b/en/a/ain’t.34105.wikitext
@@ -1,21 +1,20 @@
 ==English==
 ===Etymology===
-From the earlier form '''[[an't]]''', a contraction of "are not".  The supposition that the original meaning of "ain't" was "am not" is a myth.  Historically, it was present in many dialects of the English language except that of southeast England, which became the standard.
+From the earlier form '''[[an’t]]''', a contraction of "are not".  The supposition that the original meaning of "ain’t" was "am not" is a myth.  Historically, it was present in many dialects of the English language except that of southeast England, which became the standard.
 
 ===Contraction===
-'''ain't''' ''slang in all senses''
+'''ain’t''' ''slang in all senses''
 
-# [[are]] [[not]], [[aren't]].
-# [[is]] not, [[isn't]].
+# [[are]] [[not]], [[aren’t]].
+# [[is]] not, [[isn’t]].
 # [[am]] not.
-# [[have]] not, [[haven't]].
-# [[has]] not, [[hasn't]].
+# [[have]] not, [[haven’t]].
+# [[has]] not, [[hasn’t]].
 
 ====Usage note====
 
 *This word is slang and often considered to betray a lack of education.
 
 [[Category:English contractions]]
-
 [[ja:ain't]]
 [[pl:Ain't]]
