robot  Adding: io <mill#519742>

--- a/en/m/mill.4306.wikitext
+++ b/en/m/mill.4306.wikitext
@@ -34,8 +34,6 @@
 *[[dollar]]
 *[[manufacture]]
 
-[[it:mill]]
-
 ===Verb===
 '''to mill''' ('''mills''', '''milling''', '''milled''')
 
@@ -43,3 +41,6 @@
 #to [[shape]], [[polish]], [[dress]] or [[finish]] using a machine
 #to introduce one or more [[groove]]s or a pattern around the edge of a coin or similar round object
 #(of a crowd etc.) to move about in a random fashion
+
+[[io:Mill]]
+[[it:mill]]
