+ja, added disambiguation labels <bamboo#520680>

--- a/en/b/bamboo.746517.wikitext
+++ b/en/b/bamboo.746517.wikitext
@@ -3,50 +3,32 @@
 ===Etymology===
 From Malay [[bambu]], [[mambu]]
 
-
 ===Noun===
 '''bamboo''' ('''bamboos''')
 
-# A plant. A [[grass]] of the [[Poeaciae]] family, characterised by its woody, hollow, round, straight, jointed stem.
-# The wood of the bamboo plant as a material or [[cane]].
+#<!--DefA--> A plant. A [[grass]] of the [[Poeaciae]] family, characterised by its woody, hollow, round, straight, jointed stem.
+#<!--DefB--> The wood of the bamboo plant as a material or [[cane]].
 
 ====Translations====
-
-'''plant'''
-{| border=0  width=100%
-|-
-|bgcolor="#FFFFE0" valign=top width=48%|
-{|
-<!--languages from A to J go here-->
+<!--DefA-->'''plant'''
+{{top}}
 *French: [[bambou]] ''m''
 *Italian: [[bambù]] ''m''
-|}
-| width=1% |
-|bgcolor="#FFFFE0" valign=top width=48%|
-{|
-<!--languages from K to Z go here-->
+*Japanese: [[竹]] (たけ, take)
+{{mid}}
 *Portuguese: [[bambu]] ''m''
 *Spanish: [[bambú]] ''m''
-|}
-|}
+{{bottom}}
 
-'''wood'''
-{| border=0  width=100%
-|-
-|bgcolor="#FFFFE0" valign=top width=48%|
-{|
-<!--languages from A to J go here-->
+<!--DefB-->'''wood'''
+{{top}}
 *French: [[bambou]] ''m''
 *Italian: [[bambù]] ''m''
-|}
-| width=1% |
-|bgcolor="#FFFFE0" valign=top width=48%|
-{|
-<!--languages from K to Z go here-->
+*Japanese: [[竹材]] (たけざい, takezai)
+{{mid}}
 *Portuguese: [[bambu]] ''m''
 *Spanish: [[bambú]] ''m''
-|}
-|}
+{{bottom}}
 
 =====Translations to be checked=====
 {{checktrans}}
@@ -60,7 +42,6 @@ The translations below need to be checked by native speakers and inserted into t
 *French: [[bambou]] ''m''
 *German: [[Bambus(-rohr)]] ''m''
 *Greek: [[μπαμπού]] ''n''
-*Japanese: [[タケ]] (take)
 *Korean: [[대나무]]
 *Polish: [[bambus]] ''m''
 *Russian: [[бамбук]] ''m'' (bambuk)
@@ -68,11 +49,16 @@ The translations below need to be checked by native speakers and inserted into t
 ====Adjective====
 '''bamboo''' (''no [[comparative]] or [[superlative]]'')
 
-#Made of the wood of the bamboo.
+<!--DefC-->#Made of the wood of the bamboo.
 
 ====Translations====
+<!--DefC-->'''made of bamboo'''
+{{top}}
 *French: de bambou
 *Italian: di bambù
+{{mid}}
+*Japanese: [[竹製]]の (たけせいの, takesei no)
+{{bottom}}
 
 [[Category:Malay derivations]]
 
