--- a/en/b/bamboo.746517.wikitext
+++ b/en/b/bamboo.746517.wikitext
@@ -59,6 +59,7 @@ The translations below need to be checked by native speakers and inserted into t
 *Italian: di bambù
 {{mid}}
 *Japanese: [[竹製]]の (たけせいの, takesei no)
+*Russian: [[бамбуковый]]
 {{bottom}}
 
 [[Category:Malay derivations]]
