--- a/en/n/NRA.26207.wikitext
+++ b/en/n/NRA.26207.wikitext
@@ -1,5 +1,7 @@
-==Abbreviation==
+==English==
+==={{initialism}}===
+'''NRA'''
 
-National Rifle Association
+#National Rifle Association
 
 [[et:NRA]]
