--- a/en/h/HDPE.26239.wikitext
+++ b/en/h/HDPE.26239.wikitext
@@ -1,7 +1,8 @@
 ==English==
 {{wikipedia}}
-===Abbreviation===
+==={{initialism}}===
 '''HDPE'''
+
 #High Density [[Polyethylene]]
 
 [[category:Initialisms]]
