--- a/en/g/GCC.26247.wikitext
+++ b/en/g/GCC.26247.wikitext
@@ -1,3 +1,5 @@
-==Abbreviation==
+==English==
+==={{initialism}}===
+'''GCC'''
 
 Originally, GCC stood for "GNU C Compiler", but now stands for "GNU Compiler Collection". See [[Wikipedia:GNU Compiler Collection]].
