--- a/en/a/ADH.26250.wikitext
+++ b/en/a/ADH.26250.wikitext
@@ -1,5 +1,7 @@
 ==English==
-===Abbreviation===
-[[Antidiuretic]] [[Hormone]]
+==={{initialism}}===
+'''ADH'''
+
+#[[Antidiuretic]] [[Hormone]]
 
 [[pl:ADH]]
