robot  Adding: io <fraction#521268>

--- a/en/f/fraction.34055.wikitext
+++ b/en/f/fraction.34055.wikitext
@@ -32,5 +32,6 @@ French from Latin ''[[fractio]]'', '''breaking''', from ''[[frangere]]'', '''bre
 *[[numerator]]
 *[[denominator]]
 
+[[io:Fraction]]
 [[it:fraction]]
 [[sv:fraction]]
