robot  Adding: io, it <then#521688>

--- a/en/t/then.7353.wikitext
+++ b/en/t/then.7353.wikitext
@@ -31,5 +31,8 @@ IPA: [[WEAE]] /ðɛn/
 *[[Portuguese]]: [[então]]
 *[[Turkish]]: [[o zaman]]
 
-[[pt:Then]]
 [[Category:100 English basic words]]
+
+[[io:Then]]
+[[it:then]]
+[[pt:Then]]
