--- a/en/b/bound.6799.wikitext
+++ b/en/b/bound.6799.wikitext
@@ -79,4 +79,5 @@ The bordering sense of ''bound'' tends to be used in passive voice, as ''Kansas 
 *[[unbounded]]
 *[[westbound]]
 
+[[et:Bound]]
 [[it:bound]]
