--- a/en/n/Nintendo.775484.wikitext
+++ b/en/n/Nintendo.775484.wikitext
@@ -15,7 +15,7 @@ From Japanese ''Ninten'', "leave luck to heaven" or "in heaven's hands", + ''dou
 '''a video game company'''
 *Japanese: [[任天堂]] (にんてんどう, ''Nintendou'')
 
-[[Category:Computer and video games]]
+[[Category:Electronic games]]
 
 [[hu:Nintendo]]
 [[ja:任天堂]]
