--- a/en/p/PET.26237.wikitext
+++ b/en/p/PET.26237.wikitext
@@ -2,5 +2,6 @@
 ==English==
 ==={{initialism}}===
 '''PET'''
-#[[polyethylene terephthalate]]
-#[[positron emission tomography]]
+
+#polyethylene terephthalate
+#positron emission tomography
