--- a/en/p/PTO.26209.wikitext
+++ b/en/p/PTO.26209.wikitext
@@ -1,11 +1,11 @@
 ==English==
-===Abbreviation===
+==={{initialism}}===
 '''PTO'''
 
 #please turn over
-# the United States ''Patent'' and ''Trademark Office'', usually abbreviated USPTO.
-#power takeoff, a powered shaft for driving auxilliary equipment.
+#United States ''Patent'' and ''Trademark Office'', usually abbreviated USPTO
+#power takeoff, a powered shaft for driving auxilliary equipment
 #Parent Teacher Organization
 
 ====Translations====
-*French: [[TSVP]] (''tournez s'il vous plaît'') (1)
+*French: TSVP (''tournez s'il vous plaît'') (1)
