--- a/en/m/maximum.34063.wikitext
+++ b/en/m/maximum.34063.wikitext
@@ -12,7 +12,7 @@ French from Latin ''[[maxim]]'' + ''[[-um]]''
 ===Noun===
 '''maximum''' (plural: maxima)
 #highest limit
-#{{mathematics}} the greatest [[value]] of a [[set]] or other mathematical structure, esp. the [[global maximum|global]] or [[local maximum]] of a [[function]]
+#{{mathematics}} the greatest [[value]] of a [[set]] or other mathematical structure, esp. a [[global maximum|global]] or [[local maximum]] of a [[function]]
 
 ====Synonyms====
 *[[max]]
