/* Translations */ brazilian portuguese <fraction#529461>

--- a/en/f/fraction.34055.wikitext
+++ b/en/f/fraction.34055.wikitext
@@ -21,7 +21,7 @@ French from Latin ''[[fractio]]'', '''breaking''', from ''[[frangere]]'', '''bre
 *Italian: [[frazione]] ''f'' (1, 2)
 *Japanese: [[断片]] (dan-pen) (1), [[分数]] (2)
 *Latin: [[fractio]]
-*Portuguese: [[fracção]] ''f''
+*Portuguese: (Portugal) [[fracção]] ''f'', (Brazil) [[fração]] ''f''
 *Romanica: [[fraction]] ''f''
 *Spanish: [[fracci&oacute;n]] ''f''
 
