--- a/en/f/FOIL.26230.wikitext
+++ b/en/f/FOIL.26230.wikitext
@@ -1,5 +1,6 @@
-==Abbreviation==
+==English==
 
-The abbreviation for one algorithm for processing the multiplication of multiple binomials.
-
-Example:  (2x + 4) &times; (4x + 3y)
+==={{abbreviation}}===
+'''FOIL'''
+# The abbreviation for one algorithm for processing the multiplication of multiple binomials.
+#:''Example:  (2x + 4) &times; (4x + 3y)''
