--- a/en/b/bind.6798.wikitext
+++ b/en/b/bind.6798.wikitext
@@ -14,7 +14,7 @@
 *{{fi}}: [[sitoa]], [[yhdistää]]
 *[[Indonesian]]: [[ikat]], [[sambung]], [[hubung]]
 *[[Japanese]]: [[繋ぐ]] ([[つなぐ]], tsunagu), [[繋げる]] ([[つなげる]], tsunageru)
-
+*[[portuguese]]: [[conectar]]
 [[io:Bind]]
 [[it:bind]]
 [[pl:Bind]]
