--- a/en/f/FOIL.26230.wikitext
+++ b/en/f/FOIL.26230.wikitext
@@ -1,6 +1,6 @@
 ==English==
+==={{initialism}}===
+'''FOIL'''
 
-==={{abbreviation}}===
-'''FOIL''' (First Outer Inner Last)
-# The abbreviation for one algorithm for processing the multiplication of multiple binomials.
+# First Outer Inner Last, the abbreviation for one algorithm for processing the multiplication of multiple binomials
 #:''Example:  (2x + 4) &times; (4x + 3y)''
