--- a/en/m/mini.34065.wikitext
+++ b/en/m/mini.34065.wikitext
@@ -1,3 +1,4 @@
+:''See also:'' [[Mini]]
 ==English==
 
 ===Pronunciaton===
@@ -16,11 +17,6 @@ See [[mini-]]
 
 # A [[miniskirt]].
 # (''dated'') A [[minicomputer]].
-
-===Proper Noun===
-'''Mini &reg;'''
-
-# An Austin Mini &reg; automobile.
 
 ===Related Terms===
 *[[mini-]]
