--- a/en/m/mundo.4430.wikitext
+++ b/en/m/mundo.4430.wikitext
@@ -1,12 +1,14 @@
 ==Portuguese==
-
 ===Noun===
 '''mundo''' ''m''
 
 # [[world]]
 
-==Spanish==
+----
 
+==Spanish==
+===Etymology===
+Latin ''[[mundus]]''
 ====Hyphenation====
 :mun&middot;do
 
@@ -14,10 +16,15 @@
 '''mundo''' ''m''
 
 # [[world]]
+# [[society]]
 
-===Synonyms===
+====Synonyms====
+*[[orbe]] : this word is less used than mundo
 
-*[[orbe]] : this world is less used than mundo
+===Related terms===
+*[[mundano]]
+*[[mundial]]
+*[[mundillo]]
 
 [[it:mundo]]
 [[hu:Mundo]]
