--- a/en/q/quack.4311.wikitext
+++ b/en/q/quack.4311.wikitext
@@ -16,6 +16,7 @@
 === Translations ===
 *Dutch: [[kwak]] (1), [[kwakzalver]] (2, 3)
 *French: [[coin-coin]] (1) ''m''; [[charlatan]] ''m'' (2, 3); [[toubib]] ''m'' (4)
+*{{de}}: [[Quacksalber]] ''m'' (2, 3)
 *Indonesian: [[kwek-kwek]] (1), [[gadungan]] (2, 3)
 *Interlingua: [[quac]] (1)
 *Italian: [[qua qua]] (1) ''m''; [[ciarlatano]] (2, 3); [[dottore]] (4)
