/* English */ +fi, fixed subheadings <quack#538653>

--- a/en/q/quack.4311.wikitext
+++ b/en/q/quack.4311.wikitext
@@ -13,8 +13,9 @@
 #:''What a quack he is saying that's an organic [[Viagra]]&#8482;!'' 
 # (''slang'') a [[doctor]].
 
-=== Translations ===
+==== Translations ====
 *Dutch: [[kwak]] (1), [[kwakzalver]] (2, 3)
+*Finnish: [[kvaak]] (1), [[puoskari]] (2, 3)
 *French: [[coin-coin]] (1) ''m''; [[charlatan]] ''m'' (2, 3); [[toubib]] ''m'' (4)
 *{{de}}: [[Quacksalber]] ''m'' (2, 3)
 *Indonesian: [[kwek-kwek]] (1), [[gadungan]] (2, 3)
@@ -31,11 +32,13 @@
 #:''The more breadcrumbs I threw on the ground, the more they quacked.''
 #:''Do you hear the ducks quack?''
 
-=== Translations ===
+==== Translations ====
 *Dutch: [[kwaken]]
+*Finnish: [[vaakkua]]
 *French: [[faire]] [[coin-coin]]
 *Interlingua: [[quaccar]]
 *Italian: [[fare]] [[qua qua]]
 *Spanish: [[decir]] [[cuac]]
-[[Category:Dutch derivations]]
+
 [[Category:Animal sounds]]
+[[Category:Dutch derivations]]
