--- a/en/b/bind.6798.wikitext
+++ b/en/b/bind.6798.wikitext
@@ -1,20 +1,17 @@
+==English==
+=== Pronunciation ===
+*[[w:IPA|IPA]]: /'baɪnt/
 === Verb ===
-
-'''to bind''' ([[bound]], bound)
-
+{{irregverb|bind|[[binds]]|[[bound]]|[[bound]]|[[binding]]}}
 # to [[connect]]
 # to [[couple]]
+==== Translations ====
+*Dutch: [[binden]], [[verbinden]], [[koppelen]]
+*Finnish: [[sitoa]], [[yhdistää]]
+*Indonesian: [[ikat]], [[sambung]], [[hubung]]
+*Japanese: [[繋ぐ]] ([[つなぐ]], tsunagu), [[繋げる]] ([[つなげる]], tsunageru)
+*Portuguese: [[conectar]]
 
-=== Pronunciation ===
-*[[w:SAMPA|SAMPA]]: /'/
-*[[w:IPA|IPA]]: /'baɪnt/
-
-=== Translations ===
-*[[Dutch]]: [[binden]], [[verbinden]], [[koppelen]]
-*{{fi}}: [[sitoa]], [[yhdistää]]
-*[[Indonesian]]: [[ikat]], [[sambung]], [[hubung]]
-*[[Japanese]]: [[繋ぐ]] ([[つなぐ]], tsunagu), [[繋げる]] ([[つなげる]], tsunageru)
-*[[portuguese]]: [[conectar]]
 [[io:Bind]]
 [[it:bind]]
 [[pl:Bind]]
