making use of irregverb template <break#541231>

--- a/en/b/break.6806.wikitext
+++ b/en/b/break.6806.wikitext
@@ -3,48 +3,22 @@
 Old English ''[[brecan]]''. Compare Dutch ''[[breken]]'', German ''[[brechen]]'', and Gothic ''[[brikan]]''. Cognate with Latin ''[[frangere]]'' (to break).
 
 ====Verb====
-{| border=0 width=100%
-|-
-|bgcolor="#fff3f3" valign=top width=20%|
-{|
-''infinitive''<br>
-'''to break'''<br>
+{{irregverb|break
 *[[Pronunciation guide|AHD]]: /brāk/
 *[[Pronunciation guide|IPA]]: /breɪk/
 *[[Pronunciation guide|SAMPA]]: /breIk/
 *''Homophones:'' [[brake]]
-|}
-| width=1% |
-|bgcolor="#fff3f3" valign=top width=19%|
-{|
-''third person singular''<br>
-'''breaks'''
-*[[Pronunciation guide|IPA]]: /breɪks/
+|breaks
+*[[Pronunciation guide|IPA]]: /breɪkz/
 *''Homophones:'' [[brake]]s 
-|}
-| width=1% |
-|bgcolor="#fff3f3" valign=top width=19%|
-{|
-''past tense''<br>
-'''broke'''
+|broke
 *[[Pronunciation guide|IPA]]: /brəʊk/
-|}
-| width=1% |
-|bgcolor="#fff3f3" valign=top width=19%|
-{|
-''past participle''<br>
-'''broken'''
+|broken
 *[[Pronunciation guide|IPA]]: /brəʊkən/, /brəʊkən/
-|}
-| width=1% |
-|bgcolor="#fff3f3" valign=top width=19%|
-{|
-''present participle''<br>
-'''breaking'''
+|breaking
 *[[Pronunciation guide|IPA]]: /breɪkɪŋ/
 *''Homophones:'' [[brake|braking]]
-|}
-|}
+}}
 
 =====Intransitive=====
 #To [[end up]] in two or more [[piece]]s, which can't easily be [[reassembled]].
