--- a/en/w/w/o.26235.wikitext
+++ b/en/w/w/o.26235.wikitext
@@ -3,4 +3,4 @@
 ==={{Abbreviation}}===
 '''w/o'''
 # [[with]] [[out]]; [[without]]
-# [[write]] [[off]]; [[write-off]]
+# ''(finance, insurance):'' [[write]] [[off]]; [[write-off]]
