--- a/en/q/quadrilateral.4319.wikitext
+++ b/en/q/quadrilateral.4319.wikitext
@@ -2,11 +2,13 @@
 # a polygon having four sides.
 #:'''Translations'''
 #:*[[Dutch]]: [[vierhoek]]
+#:*{{it}}: [[quadrilatero]] ''m''
 #:*[[Romanian]]: [[patrulater]], [[cadrilater]]
 == [[adjective]] ==
 # having four sides.
 #:'''Translations'''
 #:*[[Dutch]]: [[vierhoekig]]
 #:*{{ga}}: [[ceathairshleasach]]
+#:*{{it}}: [[quadrilatero]]
 
 [[pl:Quadrilateral]]
