reinstated Wu (Wunese Soochownese) translation <bet#546623>

--- a/en/b/bet.6795.wikitext
+++ b/en/b/bet.6795.wikitext
@@ -20,6 +20,7 @@
 *Polish: [[postawi&#263;]] , [[zak&#322;ada&#263; si&#281;]]
 *Slovak: [[staviť sa]]  
 *Swedish: [[slå vad]] (1)
+*Wunese Soochownese (Rúnüt Suodsy-réro): [[ruánl tondæ]]
 
 ===Noun===
 '''bet'''
@@ -32,6 +33,7 @@
 *Dutch: [[weddenschap]] ''f'' (1), [[waarschijnlijkheid]] ''f'' (2)
 *German: [[Wette]] ''f'' (1), [[Bestimmtheit]] ''f'' (2)
 *Swedish: [[vad#Noun|vad]] ''n'' (1)
+*[[w:Wu (linguistics)|Wu]] ([[w:Suzhou dialect|Suzhou dialect]]): [[ruán-tondæ]]
 
 ----
 
