--- a/en/b/blow.6803.wikitext
+++ b/en/b/blow.6803.wikitext
@@ -39,6 +39,8 @@
 #: ''Who did you have to blow to get those backstage passes?''
 # To [[inflate]]
 #: ''blow bubbles''
+# To [[leave]]
+# ''Let's blow this joint.''
 ===== Translations=====
 *Finnish: [[puhaltaa]] (1,4), [[tuhlata]] (2), [[ottaa suihin]] (3)
 *French: [[tailler]] la [[pipe]] (3)
