--- a/en/b/bend.6792.wikitext
+++ b/en/b/bend.6792.wikitext
@@ -35,7 +35,7 @@
 #: ''There's a sharp bend in the road ahead.''
 # (''nautical'') A [[knot]] used to join two [[rope]]s, or to tie a rope onto something.
 #*Note: In naval parlance, a knot involves splicing the strands of a rope.
-# (''plural, medicine, diving'') A severe condition caused by excessively quick decompression, causing bubbles of nitrogen to form in the blood.
+# (''plural, medicine, diving'') A severe condition caused by excessively quick decompression, causing bubbles of [[nitrogen]] to form in the [[blood]], [[decompression sickness]].
 #: ''A diver who stays deep for too long must ascend very slowly in order to prevent the bends.''
 
 ====Translations====
