--- a/en/a/attend.7359.wikitext
+++ b/en/a/attend.7359.wikitext
@@ -6,9 +6,11 @@
 #to [[pay attention]] to; to [[commit]] oneself to; to give [[thought]] and [[care]] to
 
 ====Translations====
+*Deutsch: teilnehmen an, besuchen (1); beachten, s. kümmern um (2)
 *Finnish: [[osallistua]] (1)
 *French: [[assister]] à (1)
 *Spanish: [[asistir]] (1), [[atender]] (2)
+
 
 [[gl:Attend]]
 [[io:Attend]]
