--- a/en/m/micro.34067.wikitext
+++ b/en/m/micro.34067.wikitext
@@ -1,19 +1,1 @@
-==English==
-===Pronunciation===
-*[[IPA]]: //
-*[[SAMPA]]: //
-MY-kro
-
-===Etymology===
-:Shortening of '''microcomputer'''
-
-===Noun===
-'''micro'''
-
-#Short form of '''microcomputer'''
-
-===See also===
-*[[micro-]]
-
-[[fr:micro]]
-[[pl:Micro]]
+small
