Reverted edit of 24.18.247.192, changed back to last version by Conversion script <micro#549460>

--- a/en/m/micro.34067.wikitext
+++ b/en/m/micro.34067.wikitext
@@ -1,1 +1,19 @@
-small
+==English==
+===Pronunciation===
+*[[IPA]]: //
+*[[SAMPA]]: //
+MY-kro
+
+===Etymology===
+:Shortening of '''microcomputer'''
+
+===Noun===
+'''micro'''
+
+#Short form of '''microcomputer'''
+
+===See also===
+*[[micro-]]
+
+[[fr:micro]]
+[[pl:Micro]]
