--- a/en/c/CD-ROM.26226.wikitext
+++ b/en/c/CD-ROM.26226.wikitext
@@ -5,4 +5,5 @@
 # ''part {{Initialism}}'' Compact Disk - ''{{acronym}}'' Read Only Memory.  A device that can read [[CD]]s (Compact Disks), but cannot write to them.  Additionally, this is also a class of Compact Disks that are manufactured with the data and shipped, but cannot be written to at all.
 
 [[de:CD-ROM]]
+[[et:CD-ROM]]
 [[fr:CD-ROM]]
