--- a/en/t/then.7353.wikitext
+++ b/en/t/then.7353.wikitext
@@ -25,6 +25,7 @@ IPA: [[WEAE]] /ðɛn/
 *[[Chinese]]: [[然后]] (ranhou, ran2hou4), [[而后]]
 *[[Esperanto]]: [[tiam]] (1&ndash;4, ''noun''), [[tamen]] (5)
 *[[Finnish]]: [[silloin]] (1) [[:fi:silloin|(fi)]], [[sitten]] (2, 3) [[:fi:sitten|(fi)]], [[niin]] (4) [[:fi:niin|(fi)]], [[toisaalta]] (5) [[:fi:toisaalta|(fi)]]
+*French: [[alors]] (1,4), [[à]] [[cette]] [[époque]]-[[là]] (1), [[puis]] (2, 3) 
 *[[Indonesian]]: [[maka]] (if-then), [[kemudian]], [[lalu]], [[setelah itu]], [[selanjutnya]], [[berikutnya]]
 *[[Japanese]]: [[それから]] (sorekara), [[その後]] (sono ato, sono go), [[次]] ([[つぎ]], tsugi)
 *[[Kurdish]]: [[hingê]]
