robot  Adding: io, it <sir#557516>

--- a/en/s/sir.26262.wikitext
+++ b/en/s/sir.26262.wikitext
@@ -51,3 +51,6 @@ Via Norman French from Latin ''[[senior]]'', '''older''' or '''elder''', from ''
 ===Noun===
 '''sir''' ''f'' (''pl'' siroedd)
 #[[county]]
+
+[[io:Sir]]
+[[it:sir]]
