--- a/en/i/island.4316.wikitext
+++ b/en/i/island.4316.wikitext
@@ -61,3 +61,6 @@ From Old English ''[[iland]]''.  The S was added by confusion with French ''[[is
 *[[Island]] - [[Iceland]] in other languages
 
 [[Category:1000 English basic words]]
+
+[[it:island]]
+[[sv:island]]
