robot  Adding: it <theory#558670>

--- a/en/t/theory.7354.wikitext
+++ b/en/t/theory.7354.wikitext
@@ -49,3 +49,5 @@ French ''[[théorie]]'', from Latin ''[[theoria]]'', from Greek ''[[θεωρία
 [[Category:Check translations]]
 [[Category:Greek derivations]]
 [[Category:1000 English basic words]]
+
+[[it:theory]]
