robot  Adding: it <vodka#559935>

--- a/en/v/vodka.34100.wikitext
+++ b/en/v/vodka.34100.wikitext
@@ -39,8 +39,10 @@
 ====Derived Words====
 * [[vodkový]] -á -é
 
-[[pl:Vodka]]
 [[Category:Russian derivations]]
 [[Category:Polish derivations]]
 [[Category:English nouns]]
 [[Category:Slovak language]]
+
+[[it:vodka]]
+[[pl:Vodka]]
