--- a/en/w/whistle.7360.wikitext
+++ b/en/w/whistle.7360.wikitext
@@ -37,3 +37,6 @@
 *[[Japanese]]: [[笛]] ([[ふえ]], fue)
 *[[Polish]]: [[gwizd]] ''m'' (2,3) [[gwizdek]] ''m'' (1)
 [[Category:1000 English basic words]]
+
+[[io:Whistle]]
+[[it:whistle]]
