--- a/en/w/wild boar.8245.wikitext
+++ b/en/w/wild boar.8245.wikitext
@@ -62,3 +62,5 @@
 *[[Ukrainian]]: [[кабан]], [[вепр]] ([[kaban]], [[vepr]])
 *[[Upper Sorbian]]: [[dźiwje swinjo]]
 *[[Welsh]]: [[baedd gwyllt]]
+
+[[it:wild boar]]
