--- a/en/b/bet.6795.wikitext
+++ b/en/b/bet.6795.wikitext
@@ -1,27 +1,37 @@
 ==English==
-=== Pronunciation ===
-*[[w:SAMPA|SAMPA]]: /"bEt/
-*[[w:IPA|IPA]]: /ˈbεt/
-
 === Verb ===
-{{irregverb|'''bet'''|'''[[bets]]'''|'''bet '''or''' [[betted]]'''|'''bet '''or '''[[betted]]'''|'''[[betting]]'''}}
+{{irregverb|'''to bet'''
+*IPA: /ˈbεt/
+*SAMPA: /"bEt/
+|'''[[bets]]'''
+:/ˈbεtz/|'''bet '''or''' [[betted]]'''
+:/ˈbεt/ - /ˈbεtəd/
+:/"bEt/
+|'''bet '''or '''[[betted]]'''
+:/ˈbεt/ - /ˈbεtəd/
+:/"bEt/
+|'''[[betting]]'''
+:/ˈbεtɪŋ/}}
 # to [[gamble]]
 # to be [[sure]] of something, to be able to [[count]] on something
-#: ''You bet!''
+#: ''You '''bet'''!''
 
 ==== Translations ====
+{{top}}
 *Breton: [[klaoustreañ]] (1)
 *Czech: [[vsadit se]]  
 *Dutch: [[gokken]] (1), [[van op aan kunnen]] (2), [[er op kunnen rekenen]] (2)
 *French: [[parier]] (1)
 *German: [[wetten]] (1)
 *Indonesian: [[taruh|bertaruh]], [[taruh|mempertaruhkan]] (1)
+{{mid}}
 *Japanese: [[賭ける]] ([[かける]], kakeru) (1)
 *Latvian: [[nosaukt]] [[likme|likmi]] (1), [[derēt]] (1), [[būt]] [[pārliecināts|pārliecinātam]] (2)
 *Polish: [[postawi&#263;]] , [[zak&#322;ada&#263; si&#281;]]
 *Slovak: [[staviť sa]]  
 *Swedish: [[slå vad]] (1)
 *[[w:Wu (linguistics)|Wu]] ([[w:Suzhou dialect|Suzhou dialect]]): [[ruánl tondæ]]
+{{bottom}}
 
 ===Noun===
 '''bet'''
@@ -31,14 +41,16 @@
 #:''It's a good '''bet''' that it will rain tomorrow.''
 
 ====Translations====
+{{top}}
 *Dutch: [[weddenschap]] ''f'' (1), [[waarschijnlijkheid]] ''f'' (2)
 *German: [[Wette]] ''f'' (1), [[Bestimmtheit]] ''f'' (2)
+{{mid}}
 *Latvian: [[likme]] ''f'' (1)
 *Swedish: [[vad#Noun|vad]] ''n'' (1)
 *[[w:Wu (linguistics)|Wu]] ([[w:Suzhou dialect|Suzhou dialect]]): [[ruán-tondæ]]
+{{bottom}}
 
 ----
-
 ==Dutch==
 ===Verb===
 '''bet'''
