--- a/en/b/bleed.6801.wikitext
+++ b/en/b/bleed.6801.wikitext
@@ -1,13 +1,11 @@
 ==English==
-=== Pronunciation ===
-*[[w:SAMPA|SAMPA]]: /'/
-*[[w:IPA|IPA]]: /'bliːd/
-
 ===Verb===
-{{irregverb|bleed|[[bleeds]]|[[bled]]|[[bled]]|[[bleeding]]}}
+{{irregverb|'''to bleed'''
+*IPA: /'bliːd/|'''[[bleeds]]'''|'''[[bled]]'''|'''[[bled]]'''|'''[[bleeding]]'''}}
 #''(intransitive)'' Of an animal, to [[lose]] [[blood]] through an [[injured]] [[blood vessel]].
 
 ====Translations====
+{{top}}
 *Arabic: [[ينزف]]
 *Czech: [[krvácet]]
 *Dutch: [[bloeden]]
@@ -15,10 +13,12 @@
 *French: [[saigner]]
 *German: [[bluten]]
 *Indonesian: [[darah|berdarah]], [[keluar|mengeluarkan]] [[darah]], [[kucur|mengucurkan]] [[darah]], [[alir|mengalirkan]] [[darah]] 
+{{mid}}
 *Japanese: [[出血]]する ([[しゅっけつ]]する, shukketsu-suru), [[血]]を[[流す]] ([[ち]]を[[ながす]], chi-wo-nagasu)
 *Polish: [[krwawić]]
 *Romanian: [[sângera]]
 *Spanish: [[sangrar]]
 *Turkish: [[kanamak]] [-ar]
+{{bottom}}
 
 [[it:bleed]]
