/* Verb */ +IPA pronunciations <bleed#560731>

--- a/en/b/bleed.6801.wikitext
+++ b/en/b/bleed.6801.wikitext
@@ -1,7 +1,11 @@
 ==English==
 ===Verb===
 {{irregverb|'''to bleed'''
-*IPA: /'bliːd/|'''[[bleeds]]'''|'''[[bled]]'''|'''[[bled]]'''|'''[[bleeding]]'''}}
+*IPA: /'bliːd/|'''[[bleeds]]'''
+:/'bliːdz/|'''[[bled]]'''
+:/bled/|'''[[bled]]'''
+:/bled/|'''[[bleeding]]'''
+:/'bliːdɪŋ/}}
 #''(intransitive)'' Of an animal, to [[lose]] [[blood]] through an [[injured]] [[blood vessel]].
 
 ====Translations====
