--- a/en/d/dame.26261.wikitext
+++ b/en/d/dame.26261.wikitext
@@ -1,14 +1,18 @@
-==Etymology==
+==English==
+
+===Etymology===
 Via Norman French from Latin ''[[dama]]'', '''woman'''
 
-==English==
 ===Noun===
+'''dame'''  (''plural:'' '''[[dames]]''')
 # ''(archaic)'' lady, woman
 # ''(British)'' the equivalent title to [[Sir]] for a female knight
 #:  Dame Edith Sitwell
 # ''(colloquial)'' slightly derogatory way of referring to a woman
 #: "There ain't nothin' like a dame!" (''South Pacific'')
-#:'''Synonyms:''' see [[WikiSaurus:woman]]
+
+===Synonyms===
+* see [[WikiSaurus:woman]]
 
 ===Related Terms===
 *[[knight]]
