added baseball meaning, example <leather#563100>

--- a/en/l/leather.4309.wikitext
+++ b/en/l/leather.4309.wikitext
@@ -7,6 +7,8 @@
 #A piece of leather used for [[polishing]].
 #(''colloquialism'') A [[cricket]] ball or [[football]].
 #(''plural'': '''leathers''') Leather clothing, often worn by [[motorcycle]] riders.
+#{{baseball}} A good defensive play
+#: ''Jones showed good leather to snare that [[liner]].''
 
 ===Adjective===
 #Made of leather.
