--- a/en/f/fraction.34055.wikitext
+++ b/en/f/fraction.34055.wikitext
@@ -9,6 +9,9 @@ FRAAHK-shun
 
 French from Latin ''[[fractio]]'', '''breaking''', from ''[[frangere]]'', '''break'''
 
+
+===Noun===
+'''{{PAGENAME}}'''
 # a part of a whole
 # (''Mathematics'') a [[rational number]] written as two [[integer]]s, one over the other and separated by a horizontal bar called a [[solidus]], or side by side and separated by a [[slash]]; or in [[decimal notation]] using a [[decimal point]].
 # a tiny part-"a fraction of the cost"
