--- a/en/i/industrial output.7358.wikitext
+++ b/en/i/industrial output.7358.wikitext
@@ -1,10 +1,10 @@
 ==English==
+
 ===Noun===
-'''industrial output'''
+'''[[industrial]] [[output]]'''
+# {{cattag|accounting}}: What an [[industry]] [[produce]]s, as a national total.
 
-# what the [[industry]] [[produce]]s
-
-==Translations==
-* Dutch: [[industriële produktie]] ''f''
+====Translations====
+* Dutch: [[industriële produktie]] {{f}}
 * Finnish: [[teollisuustuotanto]]
-* French : [[production industrielle]] ''f''
+* French : [[production industrielle]] {{f}}
