--- a/en/b/bitten.6800.wikitext
+++ b/en/b/bitten.6800.wikitext
@@ -27,7 +27,7 @@
 ===Verb===
 '''bitten''' (''third-person singular simple present'' '''[[bittet]]''', ''[[past tense]]'' '''[[bat]]''', ''[[past participle]]'' '''[[gebeten]]''')
 
-#to [[ask]]
+#to [[ask]], [[beg]], [[plead]], [[request]]
 
 [[de:bitten]]
 [[fr:bitten]]
