robot  Modifying: pl <ain’t#571969>

--- a/en/a/ain’t.34105.wikitext
+++ b/en/a/ain’t.34105.wikitext
@@ -18,4 +18,4 @@ From the earlier form '''[[an't|an’t]]''', a contraction of “are not”.  Th
 [[Category:English contractions]]
 
 [[ja:ain't]]
-[[pl:Ain't]]
+[[pl:ain't]]
